Updated by task 'AutomatedMDTask_1658777916824_TM-MT_1658778040315'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/41d44a5e41ea27d145e25762240aa423ba839d03

--- a/help/release-notes/2022/may-2022.md
+++ b/help/release-notes/2022/may-2022.md
@@ -2,9 +2,9 @@
 title: Adobe Experience Platform 릴리스 노트 - 2022년 5월
 description: Adobe Experience Platform에 대한 2022년 5월 릴리스 노트입니다.
 exl-id: bcde04aa-7858-437c-a692-2841124006a5
-source-git-commit: 0a01dd2b0d8a1039178e3593475f9a87639ccdcd
+source-git-commit: 1ab1c269fd43368e059a76f96b3eb3ac4e7b8388
 workflow-type: tm+mt
-source-wordcount: '2415'
+source-wordcount: '2405'
 ht-degree: 5%
 
 ---
@@ -23,12 +23,12 @@ Adobe Experience Platform의 기존 기능 업데이트:
 - [경고](#alerts)
 - [감사 로그](#audit-logs)
 - [대시보드](#dashbaords)
+- [데이터 수집](#data-collection)
 - [데이터 거버넌스](#data-governance)
 - [데이터 준비](#data-prep)
 - [대상](#destinations)
 - [XDM(경험 데이터 모델)](#xdm)
 - [쿼리 서비스](#query-service)
-- [Real-time Customer Data Platform 연결](#data-collection)
 - [소스](#sources)
 
 ## 속성 기반 액세스 제어 {#abac}
@@ -139,6 +139,22 @@ Adobe Experience Platform은 일별 스냅샷 중에 캡처된 대로 조직의 
 
 세그먼트에 대한 자세한 내용은 [세그먼트 대시보드 설명서](../../dashboards/guides/segments.md).
 
+## 데이터 수집 {#data-collection}
+
+Experience Platform은 클라이언트측 고객 경험 데이터를 수집하고 Adobe Experience Platform Edge Network로 전송하여 Adobe 또는 비Adobe 대상으로 보강, 변환 및 배포할 수 있는 기술 세트를 제공합니다.
+
+**새로운 기능**
+
+| 기능 | 설명 |
+| --- | --- |
+| 데이터 스트림 복사 | [기존 데이터 스트림의 사본 만들기](../../edge/datastreams/overview.md#copy) 처음부터 시작하지 않도록 필요에 따라 구성을 조정합니다. |
+| 데이터 스트림 매핑 규칙 가져오기 | 데이터 수집을 위해 데이터 준비를 설정할 때 다음을 수행할 수 있습니다 [기존 데이터 스트림의 매핑 규칙 가져오기](../../edge/datastreams/data-prep.md#import-mapping) 모든 필드 매핑을 수동으로 구성하는 대신, |
+| Mobile SDK에 대한 데이터 스팀 매핑 지원 | 이제 Experience Platform Mobile SDK와 함께 사용하기 위한 데이터 세트에서 데이터 수집을 위한 데이터 준비를 구성할 수 있습니다. |
+| XDM 개체에 대한 데이터 스팀 매핑 지원 | XDM 개체와 데이터 레이어 개체를 매핑할 때 [데이터 수집을 위한 데이터 준비 구성](../../edge/datastreams/data-prep.md#select-data). |
+| 데이터 흐름과 통합 | Platform의 소스 카탈로그를 사용하여 데이터 수집을 위한 데이터 준비 및 데이터 준비 경고에 대한 향상된 지원을 포함하여 Platform Edge 네트워크의 데이터에 액세스할 수 있습니다. 자세한 내용은 [Adobe 데이터 수집 소스 개요](../../sources/connectors/adobe-applications/data-collection.md) 추가 정보. |
+
+자세한 내용은 [데이터 수집 개요](../../collection/home.md).
+
 ## 데이터 거버넌스 {#governance}
 
 Adobe Experience Platform 데이터 거버넌스는 고객 데이터를 관리하고 데이터 사용량에 적용되는 규정, 제한 및 정책을 준수하는 데 사용되는 일련의 전략 및 기술입니다. 이 구성 요소는 [!DNL Experience Platform] 카탈로그 작성, 데이터 계보, 데이터 사용 레이블 지정, 데이터 액세스 정책, 마케팅 작업을 위한 데이터 액세스 제어 등 다양한 수준에서 사용할 수 있습니다.
@@ -227,22 +243,6 @@ Query Service를 사용하면 표준 SQL을 사용하여 Adobe Experience Platfo
 Query Service 기능에 대한 자세한 내용은 [쿼리 서비스 개요](../../query-service/home.md)
 
 <!--For more information on data governance in Query Service, see the [data governance overview](../../query-service/data-governance/overview.md).-->
-
-## Real-time Customer Data Platform 연결 {#data-collection}
-
-Real-time Customer Data Platform 연결은 클라이언트측 고객 경험 데이터를 수집하고 Adobe Experience Platform Edge Network로 전송하여 Adobe 또는 Adobe이 아닌 대상으로 보강, 변환 및 배포할 수 있는 기술 세트를 제공합니다.
-
-**새로운 기능**
-
-| 기능 | 설명 |
-| --- | --- |
-| 데이터 스트림 복사 | [기존 데이터 스트림의 사본 만들기](../../edge/datastreams/overview.md#copy) 처음부터 시작하지 않도록 필요에 따라 구성을 조정합니다. |
-| 데이터 스트림 매핑 규칙 가져오기 | 데이터 수집을 위해 데이터 준비를 설정할 때 다음을 수행할 수 있습니다 [기존 데이터 스트림의 매핑 규칙 가져오기](../../edge/datastreams/data-prep.md#import-mapping) 모든 필드 매핑을 수동으로 구성하는 대신, |
-| Mobile SDK에 대한 데이터 스팀 매핑 지원 | 이제 Experience Platform Mobile SDK와 함께 사용하기 위한 데이터 세트에서 데이터 수집을 위한 데이터 준비를 구성할 수 있습니다. |
-| XDM 개체에 대한 데이터 스팀 매핑 지원 | XDM 개체와 데이터 레이어 개체를 매핑할 때 [데이터 수집을 위한 데이터 준비 구성](../../edge/datastreams/data-prep.md#select-data). |
-| 데이터 흐름과 통합 | Platform의 소스 카탈로그를 사용하여 데이터 수집을 위한 데이터 준비 및 데이터 준비 경고에 대한 향상된 지원을 포함하여 Platform Edge 네트워크의 데이터에 액세스할 수 있습니다. 자세한 내용은 [Adobe 데이터 수집 소스 개요](../../sources/connectors/adobe-applications/data-collection.md) 추가 정보. |
-
-자세한 내용은 [Real-Time CDP 연결 개요](../../rtcdp-connections/home.md).
 
 ## 소스 {#sources}
 
