Updated by task 'AutomatedMDTask_1658786895116_TM-MT_1658787031636'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/1c95a6e15d3d52d33f4a10f834a5f74080e6b3c9

--- a/help/release-notes/2022/july-2022.md
+++ b/help/release-notes/2022/july-2022.md
@@ -1,10 +1,10 @@
 ---
 title: Adobe Experience Platform 릴리스 노트 - 2022년 7월
 description: Adobe Experience Platform에 대한 2022년 7월 릴리스 노트입니다.
-source-git-commit: 50c36862c16192457696a55aabc3e0a60af233d3
+source-git-commit: bfb6ff054feea6dc0dcc1c98dadb158be79a284b
 workflow-type: tm+mt
-source-wordcount: '310'
-ht-degree: 9%
+source-wordcount: '944'
+ht-degree: 5%
 
 ---
 
@@ -15,6 +15,7 @@ ht-degree: 9%
 Adobe Experience Platform의 기존 기능 업데이트:
 
 - [[!DNL Data Prep]](#data-prep)
+- [XDM(경험 데이터 모델)](#xdm)
 - [소스](#sources)
 
 ## [!DNL Data Prep] {#data-prep}
@@ -31,6 +32,40 @@ Adobe Experience Platform의 기존 기능 업데이트:
 {style=&quot;table-layout:auto&quot;}
 
 에 대해 자세히 알아보려면 [!DNL Data Prep]를 참조하고 [[!DNL Data Prep] 개요](../../data-prep/home.md).
+
+## XDM(경험 데이터 모델) {#xdm}
+
+XDM은 Adobe Experience Platform으로 가져온 데이터에 대한 일반적인 구조 및 정의(스키마)를 제공하는 오픈 소스 사양입니다. XDM 표준을 준수함으로써 모든 고객 경험 데이터를 공통 표현으로 통합하여 보다 빠르고 통합된 방식으로 통찰력을 제공할 수 있습니다. 고객 작업을 통해 유용한 통찰력을 얻을 수 있고, 세그먼트를 통해 고객 대상을 정의하고, 개인화를 위해 고객 속성을 사용할 수 있습니다.
+
+**새로운 XDM 구성 요소**
+
+>[!WARNING]
+>
+>아래 표에 나열된 새 XDM 구성 요소는 실험적이고 현재 테스트 중입니다. 이러한 구성 요소는 안정화되기 전에 변경 내용(필요한 경우)으로 업데이트해야 합니다. 그에 따라 개발 노력을 계획하십시오.
+
+| 구성 요소 유형 | 이름 | 설명 |
+| --- | --- | --- |
+| 클래스 | [[!UICONTROL 날씨]](https://github.com/adobe/xdm/blob/master/components/classes/weather.schema.json) | 날씨 데이터를 캡처하는 데 사용되는 레코드 기반 클래스입니다. |
+| 필드 그룹 | [[!UICONTROL 현재 날씨]](https://github.com/adobe/xdm/blob/master/components/classes/weather.schema.json) | 에 대한 필드 그룹 [!UICONTROL XDM ExperienceEvent] 및 [!UICONTROL 날씨] 우편 번호에 대한 현재 날씨 조건을 캡처하는 데 사용되는 클래스입니다. |
+| 필드 그룹 | [[!UICONTROL 예측 날씨]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/shared/forecasted-weather.schema.json) | 에 대한 필드 그룹 [!UICONTROL XDM ExperienceEvent] 및 [!UICONTROL 날씨] 우편 번호에 대한 예측 기상 상태를 캡처하는 데 사용되는 분류 |
+| 필드 그룹 | [[!UICONTROL 제품 트리거]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/shared/product-triggers.schema.json) | 에 대한 필드 그룹 [!UICONTROL XDM ExperienceEvent] 및 [!UICONTROL 날씨] 소비자 행동을 유도하는 알려진 날씨 조건을 활용하는 제품별 트리거를 캡처하는 데 사용되는 클래스입니다. |
+| 필드 그룹 | [[!UICONTROL 상대 트리거]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/shared/relative-triggers.schema.json) | 에 대한 필드 그룹 [!UICONTROL XDM ExperienceEvent] 및 [!UICONTROL 날씨] 소비자 행동을 유도하는 알려진 날씨 조건을 활용하는 상대적 트리거를 캡처하는 데 사용되는 클래스입니다. |
+| 필드 그룹 | [[!UICONTROL 심각한 트리거]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/shared/severe-triggers.schema.json) | 에 대한 필드 그룹 [!UICONTROL XDM ExperienceEvent] 및 [!UICONTROL 날씨] 소비자 행동을 유도하는 것으로 알려진 심각한 날씨 조건을 활용하는 트리거를 캡처하는 데 사용되는 클래스입니다. |
+| 필드 그룹 | [[!UICONTROL 날씨 트리거]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/shared/weather-triggers.schema.json) | 에 대한 필드 그룹 [!UICONTROL XDM ExperienceEvent] 및 [!UICONTROL 날씨] 소비자 행동을 유도하는 알려진 날씨 조건을 활용하는 일반적인 트리거를 캡처하는 데 사용되는 클래스입니다. |
+| 필드 그룹 | [[!UICONTROL MediaCollection 상호 작용 세부 사항]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/experience-event/experienceevent-media-collection.schema.json) | 에 대한 필드 그룹 [!UICONTROL XDM ExperienceEvent] 미디어 상호 작용에 대한 세부 사항을 캡처하는 클래스입니다. |
+| 필드 그룹 | [[!UICONTROL MediaReporting 상호 작용 세부 사항]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/experience-event/experienceevent-media-reporting.schema.json) | 에 대한 필드 그룹 [!UICONTROL XDM ExperienceEvent] 미디어 보고와의 상호 작용에 대한 세부 사항을 캡처하는 클래스입니다. |
+| 데이터 유형 | [[!UICONTROL 광고 세부 사항 정보]](https://github.com/adobe/xdm/blob/master/components/datatypes/advertisingdetails.schema.json) | 광고 자산에 대한 세부 사항을 캡처합니다. |
+| 데이터 유형 | [[!UICONTROL 광고 Pod 세부 정보 정보]](https://github.com/adobe/xdm/blob/master/components/datatypes/advertisingpoddetails.schema.json) | 단일 광고 브레이크 내에서 재생되는 여러 광고의 시퀀스인 광고 Pod에 대한 세부 사항을 캡처합니다. |
+| 데이터 유형 | [[!UICONTROL 장 세부 정보]](https://github.com/adobe/xdm/blob/master/components/datatypes/chapterdetails.schema.json) | 비디오 컨텐츠에서 장 또는 세그먼트에 대한 세부 사항을 캡처합니다. |
+| 데이터 유형 | [[!UICONTROL 오류 세부 정보]](https://github.com/adobe/xdm/blob/master/components/datatypes/errordetails.schema.json) | 비디오 재생 오류에 대한 세부 사항을 캡처합니다. |
+| 데이터 유형 | [[!UICONTROL 플레이어 이벤트 세부 사항 정보]](https://github.com/adobe/xdm/blob/master/components/datatypes/playereventdetails.schema.json) | 플레이헤드 위치 및 세션 ID를 포함하여 비디오 플레이어에 대한 이벤트 관련 세부 사항을 캡처합니다. |
+| 데이터 유형 | [[!UICONTROL 플레이어 상태 데이터 정보]](https://github.com/adobe/xdm/blob/master/components/datatypes/playerstatedata.schema.json) | 비디오 플레이어에 대한 상태 관련 세부 사항을 캡처합니다. |
+| 데이터 유형 | [[!UICONTROL Qoe 데이터 세부 정보]](https://github.com/adobe/xdm/blob/master/components/datatypes/qoedatadetails.schema.json) | 비디오 재생 이벤트에 대한 QoE(체감 품질) 세부 사항을 캡처합니다. |
+| 데이터 유형 | [[!UICONTROL 세션 세부 정보]](https://github.com/adobe/xdm/blob/master/components/datatypes/sessiondetails.schema.json) | 비디오 재생 이벤트에 대한 세션 세부 사항을 캡처합니다. |
+
+{style=&quot;table-layout:auto&quot;}
+
+Platform의 XDM에 대한 자세한 내용은 [XDM 시스템 개요](../../xdm/home.md).
 
 ## 소스 {#sources}
 
