--- a/help/release-notes/2022/july-2022.md
+++ b/help/release-notes/2022/july-2022.md
@@ -1,9 +1,9 @@
 ---
 title: Adobe Experience Platform 릴리스 노트 - 2022년 7월
 description: Adobe Experience Platform에 대한 2022년 7월 릴리스 노트입니다.
-source-git-commit: bfb6ff054feea6dc0dcc1c98dadb158be79a284b
+source-git-commit: 9f5ccd554c6767de19a93e179034de38c830c002
 workflow-type: tm+mt
-source-wordcount: '944'
+source-wordcount: '1074'
 ht-degree: 5%
 
 ---
@@ -14,9 +14,24 @@ ht-degree: 5%
 
 Adobe Experience Platform의 기존 기능 업데이트:
 
+- [데이터 수집](#collection)
 - [[!DNL Data Prep]](#data-prep)
 - [XDM(경험 데이터 모델)](#xdm)
 - [소스](#sources)
+
+## 데이터 수집 {#collection}
+
+Adobe Experience Platform은 클라이언트측 고객 경험 데이터를 수집하고 Adobe Experience Platform Edge Network로 전송하여 Adobe 또는 비Adobe 대상으로 보강, 변환 및 배포할 수 있는 기술 세트를 제공합니다.
+
+**새로운 기능**
+
+| 기능 | 설명 |
+| --- | --- |
+| Adobe Admin Console을 통한 권한 관리 | 데이터 수집 기능에 대한 액세스는 이제 Adobe Experience Platform 데이터 수집에 대한 카드에서 Adobe Admin Console을 통해 관리됩니다. 다음 안내서를 참조하십시오. [데이터 수집 권한](../../collection/permissions.md) 추가 정보.<br><br>이제 데이터 세트에 대한 권한도 Adobe Experience Platform용 카드의 Admin Console을 통해 관리되므로 각 사용자에 대해 이러한 권한을 수동으로 설정하는 이전 방법에 대한 보안을 강화할 수 있습니다. |
+
+{style=&quot;table-layout:auto&quot;}
+
+자세한 내용은 [데이터 수집 개요](../../collection/home.md).
 
 ## [!DNL Data Prep] {#data-prep}
 
@@ -72,6 +87,8 @@ Platform의 XDM에 대한 자세한 내용은 [XDM 시스템 개요](../../xdm/h
 Adobe Experience Platform은 외부 소스에서 데이터를 수집하면서도 Platform 서비스를 사용하여 해당 데이터를 구조화, 레이블 지정 및 향상시킬 수 있습니다. Adobe 애플리케이션, 클라우드 기반 스토리지, 타사 소프트웨어 및 CRM 시스템과 같은 다양한 소스에서 데이터를 수집할 수 있습니다.
 
 Experience Platform은 다양한 데이터 공급자에 대한 소스 연결을 쉽게 설정할 수 있는 RESTful API 및 대화형 UI를 제공합니다. 이러한 소스 연결을 통해 외부 스토리지 시스템 및 CRM 서비스를 인증 및 연결하고, 수집 실행 시간을 설정하고, 데이터 수집 처리량을 관리할 수 있습니다.
+
+**새로운 기능**
 
 | 기능 | 설명 |
 | --- | --- |
