--- a/help/release-notes/2022/july-2022.md
+++ b/help/release-notes/2022/july-2022.md
@@ -1,10 +1,10 @@
 ---
 title: Adobe Experience Platform 릴리스 노트 - 2022년 7월
 description: Adobe Experience Platform에 대한 2022년 7월 릴리스 노트입니다.
-source-git-commit: 6fdc7a06e845db0af81a6c7f20e3bef2c4756ad3
+source-git-commit: 9bf4c6c6b5de9b9461c1ec29bf791e4268fa5330
 workflow-type: tm+mt
-source-wordcount: '1153'
-ht-degree: 5%
+source-wordcount: '1316'
+ht-degree: 4%
 
 ---
 
@@ -12,12 +12,28 @@ ht-degree: 5%
 
 **릴리스 날짜: 2022년 7월 27일**
 
+Adobe Experience Platform의 새로운 기능:
+
+- [CDP B2B에서 계정 일치 타겟팅](#B2B)
+
 Adobe Experience Platform의 기존 기능 업데이트:
 
 - [데이터 수집](#collection)
 - [[!DNL Data Prep]](#data-prep)
 - [XDM(경험 데이터 모델)](#xdm)
 - [소스](#sources)
+
+## CDP B2B에서 계정 일치 시작(#lead-to-account-matching)
+
+B2B 기업은 동일한 실제 비즈니스 업체에 대해 일부 또는 충돌하는 데이터만 포함하여 여러 시스템에 고객 정보를 저장하는 경우가 많습니다. 이를 통해 고객의 정확한 관점을 파악할 수 있으므로 B2B 마케팅 및 영업 활동의 효율성과 효율성을 줄일 수 있습니다. 계정 간 대응 리드를 릴리스한 CDP B2B는 알려진 개인 프로필을 계정 프로필에 일치시켜 계정, 기회 등과 같은 B2B 컨텍스트 데이터로 세그먼트화하고 타겟팅할 수 있도록 합니다.
+
+다음 설명서 페이지에서 기능에 대해 자세히 알아보십시오.
+
+- [CDP B2B에서 계정 일치 시작](../../rtcdp/b2b-ai-ml-services/lead-to-account-matching.md)
+- [모니터 프로필 데이터 보강 안내서에서 일치하는 프로필 데이터 보강 작업을 시작합니다](../../dataflows/ui/b2b/monitor-profile-enrichment.md)
+- [세그먼트 정의에서 관련 계정을 사용하는 방법](../../rtcdp/segmentation/b2b.md#related-accounts)
+
+실시간 CDP B2B Edition에 대한 자세한 내용은 [개요](../../rtcdp/overview.md).
 
 ## 데이터 수집 {#collection}
 
