Updated by task 'AutomatedMDTask_1658882012474_TM-MT_1658882137260'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/ca9193a47cd8cba660f9091194ac4022ad99eef8

--- a/help/release-notes/2022/july-2022.md
+++ b/help/release-notes/2022/july-2022.md
@@ -1,9 +1,9 @@
 ---
 title: Adobe Experience Platform 릴리스 노트 - 2022년 7월
 description: Adobe Experience Platform에 대한 2022년 7월 릴리스 노트입니다.
-source-git-commit: 9c240b501001bd026444e6859948527a2871be15
+source-git-commit: 95a4b79612a10554c60a3f22086a3c5829526987
 workflow-type: tm+mt
-source-wordcount: '1640'
+source-wordcount: '1637'
 ht-degree: 4%
 
 ---
@@ -14,7 +14,7 @@ ht-degree: 4%
 
 Adobe Experience Platform의 새로운 기능:
 
-- [CDP B2B에서 계정 일치 타겟팅](#B2B)
+- [Real-time Customer Data Platform B2B](#B2B)
 
 Adobe Experience Platform의 기존 기능 업데이트:
 
@@ -24,7 +24,7 @@ Adobe Experience Platform의 기존 기능 업데이트:
 - [XDM(경험 데이터 모델)](#xdm)
 - [소스](#sources)
 
-## CDP B2B에서 계정 일치 시작(#lead-to-account-matching)
+## Real-time Customer Data Platform B2B (#b2b)
 
 B2B 기업은 동일한 실제 비즈니스 업체에 대해 일부 또는 충돌하는 데이터만 포함하여 여러 시스템에 고객 정보를 저장하는 경우가 많습니다. 이를 통해 고객의 정확한 관점을 파악할 수 있으므로 B2B 마케팅 및 영업 활동의 효율성과 효율성을 줄일 수 있습니다. 계정 간 대응 리드를 릴리스한 CDP B2B는 알려진 개인 프로필을 계정 프로필에 일치시켜 계정, 기회 등과 같은 B2B 컨텍스트 데이터로 세그먼트화하고 타겟팅할 수 있도록 합니다.
 
