Updated by task 'AutomatedMDTask_1659142791020_TM-MT_1659142895062'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/fab50010a23844d775f08b17997d7a232fe77688

--- a/help/release-notes/2022/may-2022.md
+++ b/help/release-notes/2022/may-2022.md
@@ -2,7 +2,7 @@
 title: Adobe Experience Platform 릴리스 노트 - 2022년 5월
 description: Adobe Experience Platform에 대한 2022년 5월 릴리스 노트입니다.
 exl-id: bcde04aa-7858-437c-a692-2841124006a5
-source-git-commit: 7f1e4bdf54314cab1f69619bcbb34216da94b17e
+source-git-commit: 04cf9c366b0495d23979643bd9f9e2da46d6a2f2
 workflow-type: tm+mt
 source-wordcount: '2401'
 ht-degree: 5%
@@ -22,7 +22,7 @@ Adobe Experience Platform의 기존 기능 업데이트:
 
 - [경고](#alerts)
 - [감사 로그](#audit-logs)
-- [대시보드](#dashbaords)
+- [대시보드](#dashboards)
 - [데이터 수집](#data-collection)
 - [데이터 거버넌스](#data-governance)
 - [데이터 준비](#data-prep)
