Updated by task 'AutomatedMDTask_1659559325979_TM-MT_1659559418307'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/52f13353a626d615612108c72779857b0bf53b69

--- a/help/release-notes/2022/july-2022.md
+++ b/help/release-notes/2022/july-2022.md
@@ -2,9 +2,9 @@
 title: Adobe Experience Platform 릴리스 노트 - 2022년 7월
 description: Adobe Experience Platform에 대한 2022년 7월 릴리스 노트입니다.
 exl-id: e34751dc-3a83-4b34-b5f4-0379abaaf177
-source-git-commit: 72ca4f0c22d5e37ffa079940ed20e219445a0bf1
+source-git-commit: 4ba6ef979945ccd7decf4816c3410f2468b596ed
 workflow-type: tm+mt
-source-wordcount: '2348'
+source-wordcount: '2331'
 ht-degree: 5%
 
 ---
@@ -16,17 +16,14 @@ ht-degree: 5%
 Adobe Experience Platform의 기존 기능 업데이트:
 
 - [Adobe Experience Platform 릴리스 노트](#adobe-experience-platform-release-notes)
-   - [대시보드 {#dashboards}](#dashboards-dashboards)
-      - [계정 프로필 대시보드](#account-profiles-dashboards)
-      - [프로필 대시보드](#profile-dashboards)
-      - [대상 대시보드](#destinations-dashboards)
-   - [데이터 수집 {#collection}](#data-collection-collection)
-   - [[!DNL Data Prep] {#data-prep}](#dnl-data-prep-data-prep)
-   - [[!DNL Destinations] {#destinations}](#dnl-destinations-destinations)
-   - [XDM(경험 데이터 모델) {#xdm}](#experience-data-model-xdm-xdm)
-   - [Real-time Customer Data Platform B2B 에디션 {#b2b}](#real-time-customer-data-platform-b2b-edition-b2b)
-   - [실시간 고객 프로필 {#profile}](#real-time-customer-profile-profile)
-   - [소스 {#sources}](#sources-sources)
+   - [대시보드](#dashboards)
+   - [데이터 수집](#data-collection)
+   - [[!DNL Data Prep]](#data-prep)
+   - [[!DNL Destinations]](#destinations)
+   - [XDM(경험 데이터 모델)](#xdm)
+   - [Real-time Customer Data Platform B2B 에디션](#b2b)
+   - [실시간 고객 프로필](#profile)
+   - [소스](#sources)
 
 ## 대시보드 {#dashboards}
 
@@ -187,7 +184,7 @@ Real-time Customer Data Platform(실시간 CDP)를 기반으로 구축된 실시
 
 프로필 데이터 보강 모니터링 방법에 대한 안내서는 다음 문서를 참조하십시오 [UI에서 프로필 보강 모니터링](../../dataflows/ui/b2b/monitor-profile-enrichment.md).
 
-세그먼트 정의에서 관련 계정을 사용하는 방법에 대한 지침은 [Real-time Customer Data Platform B2B Edition에 대한 세그먼테이션 사용 사례](../../rtcdp/segmentation/b2b.md#related-accounts).
+Lead to Account Match 구성 방법에 대한 지침은 [계정 프로필 UI 안내서](../../rtcdp/account/../accounts/account-profile-ui-guide.md?lang=en#configure-lead-to-account-matching).
 
 실시간 CDP B2B Edition에 대한 자세한 내용은 [실시간 CDP B2B 개요](../../rtcdp/overview.md).
 
