Updated by task 'AutomatedMDTask_1659724490971_TM-MT_1659724588270'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/b83dfcebb7810a336fdd5081305be1f7a5b3b701

--- a/help/release-notes/2022/july-2022.md
+++ b/help/release-notes/2022/july-2022.md
@@ -2,9 +2,9 @@
 title: Adobe Experience Platform 릴리스 노트 - 2022년 7월
 description: Adobe Experience Platform에 대한 2022년 7월 릴리스 노트입니다.
 exl-id: e34751dc-3a83-4b34-b5f4-0379abaaf177
-source-git-commit: 5c40235b388c20f5a28a7d8535d5cf2b6d9cb40c
+source-git-commit: c4cd691eeae9e27dd7616dc19672dc5d08b8cec7
 workflow-type: tm+mt
-source-wordcount: '2326'
+source-wordcount: '2328'
 ht-degree: 5%
 
 ---
@@ -177,7 +177,7 @@ Real-time Customer Data Platform(실시간 CDP)를 기반으로 구축된 실시
 
 | 기능 | 설명 |
 | --- | --- |
-| 계정 일치 리드 | 계정 간 일치를 사용하면 알려진 개인 프로필에 계정 프로필에 가입할 수 있습니다. 그런 다음 계정 또는 기회와 같은 B2B 컨텍스트에서 데이터를 세그먼트화하고 타깃팅할 수 있습니다. 일별 실행 작업은 결정론적 요소와 확률론적 요소를 모두 사용하여 계정에 아직 연결되어 있지 않은 개인 프로필을 가장 일치하는 계정에 일치시킵니다. 그런 다음 이러한 일치를 세그먼트 정의에 포함할지 결정할 수 있습니다 |
+| 계정 일치 리드 | 계정 일치 리드 투 계정 기능을 사용하면 알려진 개인 프로필을 계정 프로필에 조인할 수 있습니다. 그런 다음 계정 또는 기회와 같은 B2B 컨텍스트에서 데이터를 세그먼트화하고 타깃팅할 수 있습니다. 일별 실행 작업은 결정론적 요소와 확률론적 요소를 모두 사용하여 계정에 아직 연결되어 있지 않은 개인 프로필을 가장 일치하는 계정에 일치시킵니다. 그런 다음 이러한 일치를 세그먼트 정의에 포함할지 결정할 수 있습니다 |
 
 자세한 내용은 [계정 일치 리드](../../rtcdp/b2b-ai-ml-services/lead-to-account-matching.md).
 
