Updated by task 'AutomatedMDTask_1661184226956_TM-MT_1661184433320'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/66b7f55b34c4b38892e7de7dbae2b627dd21981c

--- a/help/release-notes/2022/july-2022.md
+++ b/help/release-notes/2022/july-2022.md
@@ -2,10 +2,10 @@
 title: Adobe Experience Platform 릴리스 노트 - 2022년 7월
 description: Adobe Experience Platform에 대한 2022년 7월 릴리스 노트입니다.
 exl-id: e34751dc-3a83-4b34-b5f4-0379abaaf177
-source-git-commit: c4cd691eeae9e27dd7616dc19672dc5d08b8cec7
+source-git-commit: fe627849c3b7e51eaa6aeab11097163d198d4cd5
 workflow-type: tm+mt
-source-wordcount: '2328'
-ht-degree: 5%
+source-wordcount: '2437'
+ht-degree: 4%
 
 ---
 
@@ -177,15 +177,10 @@ Real-time Customer Data Platform(실시간 CDP)를 기반으로 구축된 실시
 
 | 기능 | 설명 |
 | --- | --- |
-| 계정 일치 리드 | 계정 일치 리드 투 계정 기능을 사용하면 알려진 개인 프로필을 계정 프로필에 조인할 수 있습니다. 그런 다음 계정 또는 기회와 같은 B2B 컨텍스트에서 데이터를 세그먼트화하고 타깃팅할 수 있습니다. 일별 실행 작업은 결정론적 요소와 확률론적 요소를 모두 사용하여 계정에 아직 연결되어 있지 않은 개인 프로필을 가장 일치하는 계정에 일치시킵니다. 그런 다음 이러한 일치를 세그먼트 정의에 포함할지 결정할 수 있습니다 |
+| 계정 일치 리드 | 계정 일치 리드 투 계정 기능을 사용하면 알려진 개인 프로필을 계정 프로필에 조인할 수 있습니다. 그런 다음 계정 또는 기회와 같은 B2B 컨텍스트에서 데이터를 세그먼트화하고 타깃팅할 수 있습니다. 일별 실행 작업은 결정론적 요소와 확률론적 요소를 모두 사용하여 계정에 아직 연결되어 있지 않은 개인 프로필을 가장 일치하는 계정에 일치시킵니다. 그런 다음 이러한 일치를 세그먼트 정의에 포함할지 여부를 결정할 수 있습니다. <br><br>자세한 내용은 [계정 일치 리드](../../rtcdp/b2b-ai-ml-services/lead-to-account-matching.md). Lead to Account Match 구성 방법에 대한 지침은 [계정 프로필 UI 안내서](../../rtcdp/account/../accounts/account-profile-ui-guide.md?lang=en#configure-lead-to-account-matching).</li> |
+| 예측 리드 및 계정 점수 책정 | Predictive Lead 및 Account Scorecting 은 Opportunity Stage 변환 이벤트에 대한 학습 및 예측을 수행하고 개인 활동을 계정 레벨에 통합하여 계정 점수를 생성하는 트리 기반(Random Forest/Gradient Bosting) 기계 학습 방법을 사용합니다. 가장 큰 영향을 주는 요소는 집계 및 단위 수준 모두에서 사용할 수 있으므로 B2B 마케터가 점수를 매긴 요소를 더 잘 이해할 수 있습니다. <br><br>자세한 내용은 [예측 리드 및 계정 점수 책정](../../rtcdp/b2b-ai-ml-services/predictive-lead-and-account-scoring.md). 점수를 관리하는 방법에 대한 자세한 내용은 [Real-time Customer Data Platform, B2B Edition에서 예측 리드 및 계정 점수 관리.](../../rtcdp/b2b-ai-ml-services/manage-predictive-lead-and-account-scoring.md) |
 
-자세한 내용은 [계정 일치 리드](../../rtcdp/b2b-ai-ml-services/lead-to-account-matching.md).
-
-프로필 데이터 보강 모니터링 방법에 대한 안내서는 다음 문서를 참조하십시오 [UI에서 프로필 보강 모니터링](../../dataflows/ui/b2b/monitor-profile-enrichment.md).
-
-Lead to Account Match 구성 방법에 대한 지침은 [계정 프로필 UI 안내서](../../rtcdp/account/../accounts/account-profile-ui-guide.md?lang=en#configure-lead-to-account-matching).
-
-실시간 CDP B2B Edition에 대한 자세한 내용은 [실시간 CDP B2B 개요](../../rtcdp/overview.md).
+프로필 데이터 보강 모니터링 방법에 대한 안내서는 다음 문서를 참조하십시오 [UI에서 프로필 보강 모니터링](../../dataflows/ui/b2b/monitor-profile-enrichment.md). 실시간 CDP B2B Edition에 대한 자세한 내용은 [실시간 CDP B2B 개요](../../rtcdp/overview.md).
 
 ## 실시간 고객 프로필 {#profile}
 
