Updated by task 'AutomatedMDTask_1663806772406_TM-MT_1663806875396'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/ad42773165e959f2055efe682f6a586d1d716a8a

--- a/help/tags/release-notes/2018.md
+++ b/help/tags/release-notes/2018.md
@@ -2,10 +2,10 @@
 title: 2018 릴리스 정보
 description: Adobe Experience Platform의 태그에 대한 2018 릴리스 노트.
 exl-id: fcbfa3f9-51a4-4852-894e-29343df3eabe
-source-git-commit: 77313baabee10e21845fa79763c7ade4e479e080
+source-git-commit: 0c2ee3bbb4d85bd755b4847a509fc7bd50ba67bc
 workflow-type: tm+mt
-source-wordcount: '2635'
-ht-degree: 68%
+source-wordcount: '2644'
+ht-degree: 71%
 
 ---
 
@@ -39,7 +39,7 @@ ht-degree: 68%
 
 #### 코어 확장:
 
-* **Persist Cohort 옵션** 집단 유지 옵션이 샘플링 조건에 추가되었습니다. 이 옵션은 세션 간 샘플 집단 내외에 사용자를 유지하는 효과가 있습니다. 예를 들어 &quot;persist cohort&quot; 확인란이 선택되어 있고 제공된 방문자에 대해 처음 실행된 조건이 true를 반환하는 경우, 동일한 방문자에 대해 이후에 실행되는 모든 조건은 true를 반환합니다. 마찬가지로, &quot;persist cohort&quot; 확인란이 선택되어 있고 제공된 방문자에 대해 처음 실행된 조건이 false를 반환하는 경우, 동일한 방문자에 대해 이후에 실행되는 모든 조건은 false를 반환합니다.
+* **Persist Cohort 옵션** 집단 유지 옵션이 샘플링 조건에 추가되었습니다. 이 옵션은 세션 간 샘플 집단 내외에 사용자를 유지하는 효과가 있습니다. 예를 들어 &quot;persist cohort&quot; 확인란이 선택되어 있고 제공된 방문자에 대해 처음 실행된 조건이 true를 반환하는 경우, 동일한 방문자에 대해 이후에 실행되는 모든 조건은 true를 반환합니다. 예를 들어 &quot;persist cohort&quot; 확인란이 선택되어 있고 제공된 방문자에 대해 처음 실행된 조건이 false를 반환하는 경우, 동일한 방문자에 대해 이후에 실행되는 모든 조건은 false를 반환합니다.
 * **버그 수정** 태그가 동기적으로 로드되었지만 잘못 설치된(에 대한 호출이 없음) 페이지에서 Page Bottom 이벤트와 사용자 지정 코드 작업을 사용하는 규칙이 `_satellite.pageBottom()`)를 사용하면 웹 사이트 컨텐츠가 지워집니다.
 * **버그 수정** 브라우저의 DOMContentLoaded 이벤트가 실행된 후 태그 라이브러리가 비동기적으로 로드되고 로드를 마치면 뷰포트 입력이 작동하지 않는 문제가 해결되었습니다.
 
@@ -72,7 +72,7 @@ ht-degree: 68%
 
 수천 명의 고객이 웹 태그 관리에 사용하는 태그 작업 공간을 이제 모바일 SDK를 관리하는 데 사용할 수 있습니다.
 
-모바일 태그 속성을 만들면 다음을 수행할 수 있습니다.
+데이터 수집 UI에서 모바일 속성을 만들면 다음을 수행할 수 있습니다.
 
 * 여러 솔루션에서 작업을 결합할 수 있는 데이터 요소를 만들고 복잡한 규칙을 빌드할 수 있습니다.
 * 모바일 확장을 관리합니다.
@@ -372,7 +372,7 @@ Adobe Experience Platform의 첫 번째 태그 릴리스입니다.
 
 #### 확장
 
-확장은 태그 기능을 확장하는 코드 패키지(JavaScript, HTML 및 CSS)입니다. &#x200B;사실상의 셀프 서비스 인터페이스를 사용하여 통합을 구축, 관리 및 업데이트합니다. 태그는 운영 체제로 생각할 수 있으며 확장은 작업을 수행하기 위해 사용하는 앱입니다.
+확장은 데이터 수집 UI 및 클라이언트 기능을 확장하는 코드 패키지(JavaScript, HTML 및 CSS)입니다. &#x200B;사실상의 셀프 서비스 인터페이스를 사용하여 통합을 구축, 관리 및 업데이트합니다. 태그는 운영 체제로 생각할 수 있으며 확장은 작업을 수행하기 위해 사용하는 앱입니다.
 
 #### 확장 카탈로그
 
