Updated by task 'AutomatedMDTask_1684243535137_TM-MT_1684243689818'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/e51149cbc2eb9828a4ed0b01cd3c1c8a11c94f4c

--- a/help/release-notes/2022/june-2022.md
+++ b/help/release-notes/2022/june-2022.md
@@ -2,7 +2,7 @@
 title: Adobe Experience Platform 릴리스 노트 - 2022년 6월
 description: Adobe Experience Platform에 대한 2022년 6월 릴리스 노트입니다.
 exl-id: 44f5ca11-f5c0-4e86-98b2-9564e3a5ca3d
-source-git-commit: fcd44aef026c1049ccdfe5896e6199d32b4d1114
+source-git-commit: 7c1d956e3b6a1314baa13fef823d73d42404516a
 workflow-type: tm+mt
 source-wordcount: '1845'
 ht-degree: 4%
@@ -45,8 +45,8 @@ Data Science Workspace에 대한 일반적인 정보는 [개요 설명서](../..
 
 | 기능 | 설명 |
 | ----------- | ----------- |
-| (베타) Destination SDK 지원 [[!DNL Google Cloud Storage]](../../destinations/destination-sdk/server-and-file-configuration.md#gcs-example) 파일 기반 대상 및 [구성 가능한 파일 이름](../../destinations/destination-sdk/file-based-destination-configuration.md#file-name-configuration). | 이제 Destination SDK을 사용하여 Google Cloud 저장소 대상을 만들고 파일 이름 매크로를 통해 내보낸 파일에 대한 사용자 지정 파일 이름을 정의할 수 있습니다. <br><br> Adobe Experience Platform Destination SDK의 파일 기반 대상 지원은 현재 베타에 있습니다. 설명서 및 기능은 변경될 수 있습니다. |
-| 데이터 흐름의 세그먼트 열은 배치 대상으로 실행됩니다 | 이제 데이터 흐름에서 배치 대상으로 실행하는 경우 UI에 각 데이터 흐름 실행과 연결된 세그먼트의 이름이 표시됩니다. 자세한 내용 [데이터 흐름에서 배치 대상에 실행](/help/dataflows/ui/monitor-destinations.md#dataflow-runs-for-batch-destinations). |
+| (베타) Destination SDK 지원 [[!DNL Google Cloud Storage]](../../destinations/destination-sdk/functionality/destination-server/server-specs.md#gcs-example) 파일 기반 대상 및 [구성 가능한 파일 이름](../../destinations/destination-sdk/functionality/destination-configuration/batch-configuration.md#file-name-configuration). | 이제 Destination SDK을 사용하여 Google Cloud 저장소 대상을 만들고 파일 이름 매크로를 통해 내보낸 파일에 대한 사용자 지정 파일 이름을 정의할 수 있습니다. <br><br> Adobe Experience Platform Destination SDK의 파일 기반 대상 지원은 현재 베타에 있습니다. 설명서 및 기능은 변경될 수 있습니다. |
+| 데이터 흐름의 세그먼트 열은 배치 대상으로 실행됩니다 | 이제 데이터 흐름에서 배치 대상으로 실행하는 경우 UI에 각 데이터 흐름 실행과 연결된 세그먼트의 이름이 표시됩니다. 자세한 내용 [데이터 흐름에서 배치 대상에 실행](../../dataflows/ui/monitor-destinations.md#dataflow-runs-for-batch-destinations). |
 
 {style="table-layout:auto"}
 
