Updated by task 'AutomatedMDTask_1684792020537_TM-MT_1684792135899'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/c5b1e7b1410b0049c8b361b40ab16c6f9d25adcd

--- a/help/release-notes/2023/may-2023.md
+++ b/help/release-notes/2023/may-2023.md
@@ -1,13 +1,48 @@
 ---
-title: Adobe Experience Platform 릴리스 노트 - 2023년 5월
-description: Adobe Experience Platform에 대한 2023년 5월 릴리스 노트입니다.
-source-git-commit: b4a9e539c2a09b7789898870c0cdaf06a6e36b70
+title: Adobe Experience Platform 릴리스 노트 2023년 5월
+description: Adobe Experience Platform의 2023년 5월 릴리스 정보.
+source-git-commit: 8778f20b867d8abfe07fed8e681de26d1e9e90b8
 workflow-type: tm+mt
-source-wordcount: '22'
-ht-degree: 36%
+source-wordcount: '543'
+ht-degree: 3%
 
 ---
 
 # Adobe Experience Platform 릴리스 노트
 
-**릴리스 일자: 2023년 4월 26일**
+**릴리스 날짜: 2023년 5월 24일**
+
+- [데이터 수집]
+- [소스]
+
+## 데이터 수집 {#ingestion}
+
+Adobe Experience Platform은 모든 유형의 데이터와 지연 시간을 수집할 수 있는 다양한 기능 세트를 제공합니다. Adobe이 빌드한 소스, 데이터 통합 파트너 또는 Adobe Experience Platform UI를 사용하여 일괄 처리 또는 스트리밍 API를 사용하여 수집할 수 있습니다.
+
+| 기능 | 설명 |
+| --- | --- |
+| 데이터 수집 템플릿의 Beta 가용성 | 데이터 수집 템플릿은 데이터 설계자 및 엔지니어에게 스키마 및 데이터 세트 생성 및 매핑 규칙 구성을 비롯한 데이터 수집 프로세스를 가속화하는 표준 템플릿 및 자동화 도구를 제공합니다. 데이터 수집 템플릿은 현재 [[!DNL Marketo Engage]](../../sources/connectors/adobe-applications/marketo/marketo.md), [[!DNL Salesforce]](../../sources/connectors/crm/salesforce.md) 및 [[!DNL Microsoft Dynamics]](../../sources/connectors/crm/ms-dynamics.md) 소스. 자세한 내용은 의 안내서를 참조하십시오. [UI에서 템플릿 사용](../../sources/tutorials/ui/templates.md). |
+
+자세한 내용은 [데이터 수집 개요](../../ingestion/home.md).
+
+## 소스 {#sources}
+
+Adobe Experience Platform은 외부 소스에서 데이터를 수집할 수 있으며 Platform 서비스를 사용하여 해당 데이터를 구조화하고, 레이블을 지정하고, 개선할 수 있습니다. Adobe 애플리케이션, 클라우드 기반 스토리지, 서드파티 소프트웨어 및 CRM 시스템과 같은 다양한 소스에서 데이터를 수집할 수 있습니다.
+
+Experience Platform은 다양한 데이터 공급자에 대한 소스 연결을 쉽게 설정할 수 있는 RESTful API 및 대화형 UI를 제공합니다. 이러한 소스 연결을 통해 외부 스토리지 시스템 및 CRM 서비스를 인증 및 연결하고, 수집 실행 시간을 설정하고, 데이터 수집 처리량을 관리할 수 있습니다.
+
+**업데이트된 기능**
+
+| 기능 | 설명 |
+| --- | --- |
+| 에서 데이터 스트리밍을 위한 API 지원 [!DNL Snowflake] 데이터베이스 | 이제 다음에서 데이터를 스트리밍할 수 있습니다. [[!DNL Snowflake] 소스](../../sources/connectors/databases/snowflake.md) 사용 [!DNL Flow Service] API. |
+| 초안 모드에 대한 확장된 API 지원 | 이제 를 사용할 때 소스 워크플로우 중에 진행 상황을 일시 중지하고 저장할 수 있습니다. [!DNL Flow Service] 언제든지 API를 사용할 수 있습니다. 사용 `mode=draft` 기본, 소스 및 타겟 연결을 초안으로 저장하는 상태입니다. 모든 도면 요소는 나중에 완료를 위해 다시 방문할 수 있습니다. 의 안내서 읽기 [설정 [!DNL Flow Service] 도면 상태에 엔티티](../../sources/tutorials/api/draft.md) 추가 정보. |
+| 의 일반 가용성 [!DNL Salesforce Marketing Cloud] 소스 | 다음 [[!DNL Salesforce Marketing Cloud source] 은(는) 현재 GA 상태입니다](../../sources/connectors/marketing-automation/salesforce-marketing-cloud.md). 이 소스를 사용하여 [!DNL Salesforce Marketing Cloud] Experience Platform 대상 데이터. |
+| [!DNL Google Ads] 인증 업데이트 | 이제 인증 시 로그인 고객 ID를 제공할 수 있습니다. [!DNL Google Ads] 소스 계정을 사용하여 특정 운영 고객으로부터 보고서 데이터를 가져올 수 있습니다. 읽기 [[!DNL Google Ads] 소스 설명서](../../sources/connectors/advertising/ads.md) 추가 정보. |
+| [!DNL Google PubSub] 인증 업데이트 | 이제 다음에 대한 액세스 권한을 정의할 수 있습니다. [!DNL Google PubSub] 소스(새 계정을 만들 때). 프로젝트 기반 인증을 사용하여 루트 수준 액세스를 허용하거나 주제 및 구독 기반 인증을 사용하여 특정 주제 및 구독 스트림에 대한 액세스를 제한합니다. 읽기 [[!DNL Google PubSub] 소스 설명서](../../sources/connectors/cloud-storage/google-pubsub.md) 추가 정보. |
+| 에 대한 새 페이지 매김 필드 매개 변수 `type=PAGE` 셀프서비스 소스(일괄 SDK)에서 | 이제 다음을 사용할 수 있습니다. `initialPageIndex` 및 `endPageIndex` 소스를 와 통합할 때 `type=PAGE` 배치 SDK를 통해 다음을 수행합니다. <ul><li>`initialPageIndex`: 이 매개 변수를 사용하면 페이지 매김이 시작되는 페이지 번호를 정의할 수 있습니다. </li><li>`endPageIndex`: 이 매개 변수를 사용하면 종료 조건을 설정하고 페이지 매김을 중지할 수 있습니다.</li></ul> 이러한 새 매개 변수에 대한 자세한 내용은 [셀프서비스 소스 일괄 처리 SDK 설명서](../../sources/sources-sdk/config/sourcespec.md#page). |
+| 초안 모드에 대한 UI 지원 | 이제 사용자 인터페이스를 통해 소스 워크플로우 중에 진행 상황을 일시 중지하고 저장할 수 있습니다. 다음을 선택할 수 있습니다. **[!UICONTROL 초안으로 저장]** 워크플로우의 데이터 흐름 세부 사항, 매핑 및 예약 단계 중에 데이터 흐름을 나중에 완료할 수 있도록 초안으로 저장합니다. 의 안내서 읽기 [UI에서 데이터 흐름을 초안으로 저장](../../sources/tutorials/ui/draft.md) 추가 정보. |
+
+{style="table-layout:auto"}
+
+소스에 대해 자세히 알아보려면 [소스 개요](../../sources/home.md).
