--- a/help/release-notes/2023/may-2023.md
+++ b/help/release-notes/2023/may-2023.md
@@ -1,29 +1,93 @@
 ---
 title: Adobe Experience Platform 릴리스 노트 2023년 5월
 description: Adobe Experience Platform의 2023년 5월 릴리스 정보.
-source-git-commit: 8778f20b867d8abfe07fed8e681de26d1e9e90b8
+source-git-commit: 85401e3abfd7d5d1d84e082d20a1a064760c4e19
 workflow-type: tm+mt
-source-wordcount: '543'
-ht-degree: 3%
+source-wordcount: '1072'
+ht-degree: 4%
 
 ---
 
 # Adobe Experience Platform 릴리스 노트
 
+>[!IMPORTANT]
+>
+>Audience Portal 기능이 일반적으로 사용할 수 있게 될 것을 대비하여 Adobe Experience Platform은 시스템 및 설명서 내에서 &quot;대상&quot; 및 &quot;세그먼트&quot;의 사용을 업데이트하고 있습니다.
+>
+>- **대상자**: 사람, 계정, 가계 또는 일반적인 특성과 행동을 공유하는 기타 엔티티의 집합입니다.
+>
+>- **세그먼트 정의**: Adobe Experience Platform에서 타겟 대상의 주요 특성 또는 동작을 설명하는 데 사용되는 규칙입니다. 이 용어는 이전에 &quot;세그먼트&quot;라고도 했습니다.
+>
+>- **세그먼트**: 프로필을 대상자로 분리하는 작업입니다. &quot;세그먼트&quot;라는 용어는 이제 동사로만 사용됩니다.
+>
+>- **세분화**: 대상과 같은 결과 세트를 생성하기 위해 함께 그룹화할 프로필의 특성을 식별하고 아티큘레이션하는 작업입니다.
+>
+>그 결과, Adobe Experience Platform UI 내에는 이러한 새로운 대상 생성 및 관리 경로를 반영하기 위해 &quot;세그먼트&quot;가 &quot;대상&quot;으로 대체되는 것이 표시됩니다.
+
 **릴리스 날짜: 2023년 5월 24일**
 
-- [데이터 수집]
-- [소스]
+Adobe Experience Platform의 기존 기능 업데이트:
 
-## 데이터 수집 {#ingestion}
+- [데이터 수집](#data-collection)
+- [데이터 거버넌스](#data-governance)
+- [데이터 수집](#data-ingestion)
+- [쿼리 서비스](#query-service)
+- [소스](#sources)
+
+## 데이터 수집 {#data-collection}
+
+Adobe Experience Platform은 클라이언트측 고객 경험 데이터를 수집하여 Adobe Experience Platform Edge Network로 전송하여 Adobe 또는 비 Adobe 대상으로 보강, 변환 및 배포할 수 있는 기술 제품군을 제공합니다.
+
+**새 기능 또는 업데이트된 기능**
+
+| 기능 | 설명 |
+| --- | --- |
+| [!DNL Twitter] 전환 API 확장 | 다음 [[!DNL Twitter] 전환 API](../../tags/extensions/server/twitter/overview.md) 이벤트 전달 확장을 사용하면 를 사용하여 이벤트 변환을 위해 이벤트 데이터를 서버측에 실시간으로 전달할 수 있습니다. [!DNL Twitter] 전환 API입니다. |
+| 데이터 요소 경로 지원 | 내에서 데이터 요소의 경로 확인 [코어 확장](../../tags/extensions/client/core/overview.md) 이전보다 훨씬 쉬워졌습니다. 이 개선 사항은 올바른 데이터 요소 경로를 선택하고 서식을 지정하는 데 도움이 되는 안내식 양식을 제공합니다. |
+
+{style="table-layout:auto"}
+
+데이터 수집에 대해 자세히 알아보려면 [데이터 컬렉션 개요](../../tags/home.md).
+
+## 데이터 거버넌스 {#data-governance}
+
+Adobe Experience Platform 데이터 거버넌스는 고객 데이터를 관리하고 데이터 사용에 적용되는 규정, 제한 및 정책을 준수하는 데 사용되는 일련의 전략 및 기술입니다. 카탈로그 작성, 데이터 계보, 데이터 사용 레이블 지정, 데이터 액세스 정책, 마케팅 작업을 위한 데이터에 대한 액세스 제어 등 다양한 수준에서 Experience Platform 내에서 중요한 역할을 합니다.
+
+**새로운 기능**
+
+| 기능 | 설명 |
+| --- | --- |
+| 데이터 세트 필드 수준 레이블 지정 중단 | 개별 필드에 레이블을 적용하는 기능이 데이터 세트에서 스키마로 이동되었습니다. 이를 통해 데이터 거버넌스, 동의 및 액세스 제어를 위해 필드 레이블을 업스트림 관리할 수 있습니다. 이전에 적용된 데이터 세트 필드 레이블은 Experience Platform UI를 통해 일시적으로 지원됩니다. 2024년 5월 31일까지 기존 데이터 세트 필드 레이블을 스키마 필드 레이블로 수동으로 마이그레이션해야 합니다. 다음을 읽으십시오. [데이터 거버넌스 전체 안내서](../../data-governance/e2e.md) 레이블 마이그레이션에 대한 자세한 내용을 보려면 여기를 클릭하십시오. |
+
+{style="table-layout:auto"}
+
+데이터 거버넌스에 대해 자세히 알아보려면 [데이터 거버넌스 개요](../../data-governance/home.md).
+
+## 데이터 수집 {#data-ingestion}
 
 Adobe Experience Platform은 모든 유형의 데이터와 지연 시간을 수집할 수 있는 다양한 기능 세트를 제공합니다. Adobe이 빌드한 소스, 데이터 통합 파트너 또는 Adobe Experience Platform UI를 사용하여 일괄 처리 또는 스트리밍 API를 사용하여 수집할 수 있습니다.
+
+**업데이트된 기능**
 
 | 기능 | 설명 |
 | --- | --- |
 | 데이터 수집 템플릿의 Beta 가용성 | 데이터 수집 템플릿은 데이터 설계자 및 엔지니어에게 스키마 및 데이터 세트 생성 및 매핑 규칙 구성을 비롯한 데이터 수집 프로세스를 가속화하는 표준 템플릿 및 자동화 도구를 제공합니다. 데이터 수집 템플릿은 현재 [[!DNL Marketo Engage]](../../sources/connectors/adobe-applications/marketo/marketo.md), [[!DNL Salesforce]](../../sources/connectors/crm/salesforce.md) 및 [[!DNL Microsoft Dynamics]](../../sources/connectors/crm/ms-dynamics.md) 소스. 자세한 내용은 의 안내서를 참조하십시오. [UI에서 템플릿 사용](../../sources/tutorials/ui/templates.md). |
 
-자세한 내용은 [데이터 수집 개요](../../ingestion/home.md).
+데이터 수집에 대해 자세히 알아보려면 [데이터 수집 개요](../../ingestion/home.md).
+
+## 쿼리 서비스 {#query-service}
+
+쿼리 서비스를 사용하면 표준 SQL을 사용하여 Adobe Experience Platform에서 데이터를 쿼리할 수 있습니다 [!DNL data lake]. 데이터 레이크에서 모든 데이터 세트에 참여하고 쿼리 결과를 보고 또는 Data Science Workspace에 사용하거나 실시간 고객 프로필에 수집하기 위한 새 데이터 세트로 캡처할 수 있습니다.
+
+**업데이트된 기능**
+
+| 기능 | 설명 |
+| --- | --- |
+| ADLS 데이터 세트에 대한 열 수준 통계 계산 | 다음 `ANALYZE TABLE` 명령을 확장했습니다. `COMPUTE STATISTICS` 및 `SHOW STATISTICS` 명령. 이제 ADLS 데이터 세트의 하위 집합 또는 해당 데이터 세트 내의 특정 열에 대한 통계를 계산할 수 있습니다. 자세한 내용은 [데이터 세트 통계 계산 안내서](../../query-service/essential-concepts/dataset-statistics.md). |
+
+{style="table-layout:auto"}
+
+쿼리 서비스에 대한 자세한 내용은 [쿼리 서비스 개요](../../query-service/home.md).
 
 ## 소스 {#sources}
 
@@ -35,7 +99,6 @@ Experience Platform은 다양한 데이터 공급자에 대한 소스 연결을 
 
 | 기능 | 설명 |
 | --- | --- |
-| 에서 데이터 스트리밍을 위한 API 지원 [!DNL Snowflake] 데이터베이스 | 이제 다음에서 데이터를 스트리밍할 수 있습니다. [[!DNL Snowflake] 소스](../../sources/connectors/databases/snowflake.md) 사용 [!DNL Flow Service] API. |
 | 초안 모드에 대한 확장된 API 지원 | 이제 를 사용할 때 소스 워크플로우 중에 진행 상황을 일시 중지하고 저장할 수 있습니다. [!DNL Flow Service] 언제든지 API를 사용할 수 있습니다. 사용 `mode=draft` 기본, 소스 및 타겟 연결을 초안으로 저장하는 상태입니다. 모든 도면 요소는 나중에 완료를 위해 다시 방문할 수 있습니다. 의 안내서 읽기 [설정 [!DNL Flow Service] 도면 상태에 엔티티](../../sources/tutorials/api/draft.md) 추가 정보. |
 | 의 일반 가용성 [!DNL Salesforce Marketing Cloud] 소스 | 다음 [[!DNL Salesforce Marketing Cloud source] 은(는) 현재 GA 상태입니다](../../sources/connectors/marketing-automation/salesforce-marketing-cloud.md). 이 소스를 사용하여 [!DNL Salesforce Marketing Cloud] Experience Platform 대상 데이터. |
 | [!DNL Google Ads] 인증 업데이트 | 이제 인증 시 로그인 고객 ID를 제공할 수 있습니다. [!DNL Google Ads] 소스 계정을 사용하여 특정 운영 고객으로부터 보고서 데이터를 가져올 수 있습니다. 읽기 [[!DNL Google Ads] 소스 설명서](../../sources/connectors/advertising/ads.md) 추가 정보. |
@@ -46,3 +109,5 @@ Experience Platform은 다양한 데이터 공급자에 대한 소스 연결을 
 {style="table-layout:auto"}
 
 소스에 대해 자세히 알아보려면 [소스 개요](../../sources/home.md).
+
+<!-- | API support for streaming data from a [!DNL Snowflake] database | You can now stream data from a [[!DNL Snowflake] source](../../sources/connectors/databases/snowflake.md) using the [!DNL Flow Service] API. | -->
