Updated by task 'AutomatedMDTask_1685749235192_TM-MT_1685749366177'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/7af1338d8713cec43280a1913b2ab84f59f74937

--- a/help/release-notes/2023/may-2023.md
+++ b/help/release-notes/2023/may-2023.md
@@ -1,9 +1,9 @@
 ---
 title: Adobe Experience Platform 릴리스 노트 2023년 5월
 description: Adobe Experience Platform의 2023년 5월 릴리스 정보.
-source-git-commit: 09d8014eea2d31649eed3814ad07172027b2c435
+source-git-commit: 133d6af3b209f848a2f257d4a3903ee1b8ec2f76
 workflow-type: tm+mt
-source-wordcount: '1777'
+source-wordcount: '1994'
 ht-degree: 5%
 
 ---
@@ -28,6 +28,7 @@ ht-degree: 5%
 
 Adobe Experience Platform의 기존 기능 업데이트:
 
+- [대시보드](#dashboards)
 - [데이터 수집](#data-collection)
 - [데이터 거버넌스](#data-governance)
 - [데이터 수집](#data-ingestion)
@@ -36,6 +37,16 @@ Adobe Experience Platform의 기존 기능 업데이트:
 - [ID 서비스](#identity-service)
 - [쿼리 서비스](#query-service)
 - [소스](#sources)
+
+## 대시보드 {#dashboards}
+
+Adobe Experience Platform은 일별 스냅샷 중에 캡처한 대로 조직 데이터에 대한 중요한 통찰력을 볼 수 있는 여러 대시보드를 제공합니다.
+
+| 기능 | 설명 |
+| --- | --- |
+| 라이선스 권한 수정 | 다음 [!UICONTROL 라이선스 사용] 판매 주문에 기록된 라이선스 권한과 Experience Platform에 원래 보고된 라이선스 권한 간의 이전 불일치를 해결하기 위해 고객에 대한 대시보드 및 개별 라이선스 데이터가 업데이트되었습니다 [!UICONTROL 라이선스 사용] 대시보드입니다. 개별 라이선스 데이터의 업데이트는 2023년 6월부터 2023년 6월 11일 사이에 단계적으로 이루어집니다. 실제 사용 값은 정확하게 유지됩니다.<br><br>Experience Platform은 사용 볼륨을 관리할 수 있는 여러 기능을 제공합니다.<br><ul><li>[데이터 및 라이선스 사용을 관리하기 위한 모범 사례를 검토하고 적용합니다](https://experienceleague.adobe.com/docs/experience-platform/landing/license/data-management-best-practices.html)</li><li>다음에 필터링 규칙 및 조건 적용 [실시간 고객 프로필에 수집에서 데이터를 선택적으로 포함하거나 제외합니다](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html#filtering-for-profile) Analytics 데이터가 프로필에 수집되기 전에.</li><li>[익명 프로필에 대한 만료 시간을 적용하려면 Adobe 지원에 문의하십시오.](https://experienceleague.adobe.com/docs/experience-platform/profile/pseudonymous-profiles.html)</li><li>[원하는 데이터 세트에 대한 경험 이벤트 만료를 활성화하려면 Adobe 지원 센터에 문의하십시오.](https://experienceleague.adobe.com/docs/experience-platform/profile/event-expirations.html)</li><li>라이선스 권한을 늘리는 옵션에 대해 논의하려면 Adobe 담당자에게 문의하십시오.</li></ul> |
+
+액세스 권한을 부여하고 사용자 정의 위젯을 만드는 방법을 포함하여 대시보드에 대한 자세한 내용은 [대시보드 개요](../../dashboards/home.md).
 
 ## 데이터 수집 {#data-collection}
 
