Updated by task 'AutomatedMDTask_1689046009102_TM-MT_1689046121774'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/ca03f297bfd169513c35a98a2b92090158141128

--- a/help/tags/release-notes/2018.md
+++ b/help/tags/release-notes/2018.md
@@ -2,9 +2,9 @@
 title: 2018 릴리스 정보
 description: Adobe Experience Platform의 태그에 대한 2018 릴리스 정보입니다.
 exl-id: fcbfa3f9-51a4-4852-894e-29343df3eabe
-source-git-commit: 8ded2aed32dffa4f0923fedac7baf798e68a9ec9
+source-git-commit: 4f75bbfee6b550552d2c9947bac8540a982297eb
 workflow-type: tm+mt
-source-wordcount: '2635'
+source-wordcount: '2639'
 ht-degree: 68%
 
 ---
@@ -81,9 +81,9 @@ ht-degree: 68%
 * Mobile Core 확장 및 모든 추가 확장은 Maven 및 CocoaPods와 같은 종속성 관리자를 통해 다운로드 및 설치할 수 있습니다.
 * 확장을 추가할 때 앱을 다시 컴파일하고 앱 스토어 제출/승인 프로세스를 완료해야 합니다.
 
-   데이터 요소, 규칙 및 확장 구성은 애플리케이션에 동적으로 전달되고, 앱 실행 시 업데이트되므로 앱스토어 업데이트가 필요하지 않습니다.
+  데이터 요소, 규칙 및 확장 구성은 애플리케이션에 동적으로 전달되고, 앱 실행 시 업데이트되므로 앱스토어 업데이트가 필요하지 않습니다.
 
-모바일 속성 시작하기에 대한 자세한 내용은 [모바일](https://aep-sdks.gitbook.io/docs/)을 참조하십시오.
+모바일 속성 시작하기에 대한 자세한 내용은 [모바일](https://experienceleague.adobe.com/docs/platform-learn/data-collection/mobile-sdk/overview.html)을 참조하십시오.
 
 ## 2018년 9월 6일
 
@@ -196,7 +196,7 @@ ht-degree: 68%
 
 * 변경 사항이 저장되면 더 이상 규칙 구성 요소에 저장되지 않은 변경 내용을
 
-   묻는 메시지가 표시되지 않습니다.
+  묻는 메시지가 표시되지 않습니다.
 
 * 활성 라이브러리와의 상호 작용 관련 문제가 해결되었습니다.
 
@@ -325,11 +325,11 @@ ht-degree: 68%
 
 * 페이지 내
 
-   이제 태그 라이브러리가 비동기 실행을 지원합니다. 이로 인해 라이브러리에서 발생하는 내용을 변경하는 방법에는 중요한 영향이 있습니다. 작업을 수행하기 전에 [비동기 문서](../ui/client-side/asynchronous-deployment.md)를 읽어야 합니다.
+  이제 태그 라이브러리가 비동기 실행을 지원합니다. 이로 인해 라이브러리에서 발생하는 내용을 변경하는 방법에는 중요한 영향이 있습니다. 작업을 수행하기 전에 [비동기 문서](../ui/client-side/asynchronous-deployment.md)를 읽어야 합니다.
 
 * 비동기 환경 켜기/끄기
 
-   환경에 대한 포함 코드를 검색할 때 라이브러리를 비동기식으로 로드하려면 켜기/끄기 스위치를 전환하여 포함 코드를 가져옵니다.
+  환경에 대한 포함 코드를 검색할 때 라이브러리를 비동기식으로 로드하려면 켜기/끄기 스위치를 전환하여 포함 코드를 가져옵니다.
 
 #### 사용자 인터페이스 개선 사항
 
