--- a/help/release-notes/2023/june-2023.md
+++ b/help/release-notes/2023/june-2023.md
@@ -2,7 +2,7 @@
 title: Adobe Experience Platform 릴리스 정보
 description: Adobe Experience Platform의 2023년 6월 릴리스 정보입니다.
 source-git-commit: 0aafba9c2887e39f983c354a73d5544f3b0e681f
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '1538'
 ht-degree: 100%
 
