Updated by task 'AutomatedMDTask_1690551541634_TM-MT_1690551681682'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/f83b4978efc021c828ed905939e240f17608c04d

--- a/help/release-notes/2023/july-2023.md
+++ b/help/release-notes/2023/july-2023.md
@@ -1,9 +1,9 @@
 ---
 title: Adobe Experience Platform 릴리스 정보
 description: Adobe Experience Platform의 2023년 7월 릴리스 정보.
-source-git-commit: 62a0b6327f1707fcc639a309ae7db5bf0e4c828a
+source-git-commit: 7cc7d43f6424ff91bd237235b278bf13a0add45d
 workflow-type: tm+mt
-source-wordcount: '993'
+source-wordcount: '1017'
 ht-degree: 25%
 
 ---
@@ -54,16 +54,9 @@ For more information on Data Prep, please read the [Data Prep overview](../../da
 
 **새로운 대상 또는 업데이트된 대상** {#new-updated-destinations}
 
-<!--
-
-LiveRamp commented out until it is officially released tomorrow
-
-| [[!DNL LiveRamp - Onboarding]](../../destinations/catalog/advertising/liveramp-onboarding.md) | New | Onboard identities from Adobe Experience Platform into [!DNL LiveRamp Connect] so that you can target users on mobile, open web, social, and [!DNL CTV] platforms, using the [!DNL Ramp ID] identifier. |
-
--->
-
 | 대상 | 신규 또는 업데이트됨 | 설명 |
 | ----------- |----------------|----------- |
+| [[!DNL LiveRamp - Onboarding]](../../destinations/catalog/advertising/liveramp-onboarding.md) | 신규 | Adobe Experience Platform에서 로 ID 온보드 [!DNL LiveRamp Connect] 를 사용하면 모바일, 오픈 웹, 소셜 및 [!DNL CTV] 플랫폼, 사용 [!DNL Ramp ID] 식별자. |
 | [[!DNL Azure Data Lake Storage Gen2]](../../destinations/catalog/cloud-storage/adls-gen2.md) | 신규 | 에 대한 실시간 아웃바운드 연결 만들기 [!DNL Azure Data Lake Storage Gen2] Adobe Experience Platform의 데이터 파일을 정기적으로 고유한 저장소 위치로 내보냅니다. 이 새 대상은 향상된 파일 내보내기 기능을 제공하며 을 지원합니다 [!BADGE 베타]{type=Informative} |
 | [[!DNL Data Landing Zone]](../../destinations/catalog/cloud-storage/data-landing-zone.md) | 신규 | [!DNL Data Landing Zone] 은(는) [!DNL Azure Blob] Adobe Experience Platform에서 프로비저닝한 스토리지 인터페이스로, 안전한 클라우드 기반 파일 스토리지 시설에 대한 액세스 권한을 부여하여 플랫폼 외부로 파일을 내보낼 수 있습니다. 이 새 대상은 향상된 파일 내보내기 기능을 제공하며 을 지원합니다 [!BADGE 베타]{type=Informative} |
 | [[!DNL Google Cloud Storage]](../../destinations/catalog/cloud-storage/google-cloud-storage.md) | 신규 | 에 대한 실시간 아웃바운드 연결 만들기 [!DNL Google Cloud Storage] Adobe Experience Platform의 데이터 파일을 정기적으로 고유한 버킷으로 내보냅니다. 이 새 대상은 향상된 파일 내보내기 기능을 제공하며 을 지원합니다 [!BADGE 베타]{type=Informative} |
