Updated by task 'AutomatedMDTask_1691167620681_TM-MT_1691167735020'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/9c61dbcfb74c568dab62cefa3e852093f4242ad5

--- a/help/release-notes/2023/may-2023.md
+++ b/help/release-notes/2023/may-2023.md
@@ -1,10 +1,10 @@
 ---
 title: Adobe Experience Platform 릴리스 정보 2023년 5월
 description: Adobe Experience Platform의 2023년 5월 릴리스 정보입니다.
-source-git-commit: 871b9448288e11e2e21dfc1471a618fd7cad6c13
-workflow-type: ht
-source-wordcount: '1994'
-ht-degree: 100%
+source-git-commit: b94536be6e92354e237b99d36af13adf5a49afa7
+workflow-type: tm+mt
+source-wordcount: '1993'
+ht-degree: 99%
 
 ---
 
@@ -172,7 +172,7 @@ ID 서비스에 대한 자세한 내용은 [ID 서비스 개요](../../identity-
 
 | 기능 | 설명 |
 | --- | --- |
-| ADLS 데이터 세트에 대한 열 수준의 통계 계산 | `COMPUTE STATISTICS` 및 `SHOW STATISTICS` SQL 명령을 사용하여 `ANALYZE TABLE` 명령이 확장되었습니다. 이제 ADLS 데이터 세트의 하위 집합 또는 해당 데이터 세트 내의 특정 열에 대한 통계를 계산할 수 있습니다. 자세한 내용은 [데이터 세트 통계 계산 안내서](../../query-service/essential-concepts/dataset-statistics.md)를 참조하십시오. |
+| ADLS 데이터 세트에 대한 열 수준의 통계 계산 | 다음 `ANALYZE TABLE` 명령을 확장했습니다. `COMPUTE STATISTICS` SQL 명령. 이제 ADLS 데이터 세트의 하위 집합 또는 해당 데이터 세트 내의 특정 열에 대한 통계를 계산할 수 있습니다. 자세한 내용은 [데이터 세트 통계 계산 안내서](../../query-service/essential-concepts/dataset-statistics.md)를 참조하십시오. |
 
 {style="table-layout:auto"}
 
