--- a/help/release-notes/2023/july-2023.md
+++ b/help/release-notes/2023/july-2023.md
@@ -2,7 +2,7 @@
 title: Adobe Experience Platform 릴리스 정보
 description: Adobe Experience Platform의 2023년 7월 릴리스 정보입니다.
 source-git-commit: 49a04ffa059a73678cec10d2475a83e137ecb603
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '1804'
 ht-degree: 100%
 
