--- a/help/release-notes/2023/june-2023.md
+++ b/help/release-notes/2023/june-2023.md
@@ -1,8 +1,9 @@
 ---
 title: Adobe Experience Platform 릴리스 정보
 description: Adobe Experience Platform의 2023년 6월 릴리스 정보입니다.
-source-git-commit: 0aafba9c2887e39f983c354a73d5544f3b0e681f
-workflow-type: ht
+exl-id: 8a2bf2c0-e469-42f5-b324-6acba83d5ec3
+source-git-commit: b4334b4f73428f94f5a7e5088f98e2459afcaf3c
+workflow-type: tm+mt
 source-wordcount: '1538'
 ht-degree: 100%
 
