--- a/help/release-notes/2019/july-2019.md
+++ b/help/release-notes/2019/july-2019.md
@@ -5,16 +5,16 @@ doc-type: release notes
 last-update: July 31, 2019
 author: ens28527
 exl-id: 562e331a-a00b-41f7-9684-800ad0f3c471
-source-git-commit: ce967ae176fce81aa26d92b3f0ee8be006808657
+source-git-commit: e52eb90b64ae9142e714a46017cfd14156c78f8b
 workflow-type: tm+mt
-source-wordcount: '809'
-ht-degree: 3%
+source-wordcount: '807'
+ht-degree: 5%
 
 ---
 
-# Adobe Experience Platform 릴리스 노트
+# Adobe Experience Platform 릴리스 정보
 
-**릴리스 날짜: 2019년 7월 25일**
+**릴리스 날짜: 2019년 7월 25일 금요일**
 
 Adobe Experience Platform의 새로운 기능:
 
@@ -41,7 +41,7 @@ Adobe Experience Platform [!DNL Privacy Service] 는 회사가 고객 데이터 
 
 **버그 수정**
 
-* None.
+* 없음.
 
 자세한 내용은 [Privacy Service 개요](../../privacy-service/home.md).
 
@@ -49,7 +49,7 @@ Adobe Experience Platform [!DNL Privacy Service] 는 회사가 고객 데이터 
 
 표준화 및 상호 운용성은 핵심 개념입니다 [!DNL Experience Platform]. [!DNL Experience Data Model] Adobe을 기반으로 하는 (XDM)은 고객 경험 데이터를 표준화하고 고객 경험 관리를 위한 스키마를 정의하는 작업입니다.
 
-XDM은 디지털 경험의 성능을 개선하기 위해 설계된 공개적으로 문서화된 사양입니다. Adobe Experience Platform의 서비스와 통신하는 모든 애플리케이션에 대한 일반적인 구조와 정의를 제공합니다. XDM 표준을 준수함으로써 모든 고객 경험 데이터를 일반적인 표현에 통합하여 더 빠르고 통합적인 방식으로 통찰력을 제공할 수 있습니다. 고객 작업에서 중요한 통찰력을 얻고, 세그먼트를 통해 고객 대상을 정의하고, 개인화 목적으로 고객 속성을 사용할 수 있습니다.
+XDM은 디지털 경험의 성능을 개선하기 위해 설계된 공개적으로 문서화된 사양입니다. Adobe Experience Platform의 서비스와 통신하는 모든 애플리케이션에 대한 일반적인 구조와 정의를 제공합니다. XDM 표준을 준수함으로써 모든 고객 경험 데이터를 일반적인 표현에 통합하여 더 빠르고 통합적인 방식으로 통찰력을 제공할 수 있습니다. 고객 조치에서 귀중한 인사이트를 얻고, 세그먼트를 통해 고객 대상자를 정의하고, 개인 설정 목적으로 고객 속성을 사용할 수 있습니다.
 
 XDM은 을 허용하는 메커니즘입니다. [!DNL Experience Cloud]: Adobe Experience Platform에서 제공하며, 적절한 사람에게 적절한 메시지를 적절한 채널에서 정확한 순간에 전달할 수 있습니다.
 
@@ -78,9 +78,9 @@ XDM은 을 허용하는 메커니즘입니다. [!DNL Experience Cloud]: Adobe Ex
 
 를 사용하여 XDM 작업에 대해 자세히 알아보려면 [!DNL Schema Registry] API 및 [!DNL Schema Editor], 다음을 읽으십시오. [XDM 시스템 설명서](../../xdm/home.md).
 
-## 세분화 서비스 {#segmentation}
+## Segmentation Service {#segmentation}
 
-Adobe Experience Platform [!DNL Segmentation Service] 에서는 마케팅 가능한 사용자 그룹의 속성 및 동작을 설명하는 규칙을 만든 다음, 프로필 스토어의 프로필을 사용하여 이러한 규칙을 기반으로 실행 가능한 대상을 구축할 수 있습니다.
+Adobe Experience Platform [!DNL Segmentation Service] 을(를) 사용하면 마케팅 가능한 사용자 그룹의 속성 및 동작을 설명하는 규칙을 만든 다음, 프로필 스토어의 프로필을 사용하여 이러한 규칙을 기반으로 실행 가능한 대상을 구축할 수 있습니다.
 
 **새로운 기능**
 
@@ -93,7 +93,7 @@ Adobe Experience Platform [!DNL Segmentation Service] 에서는 마케팅 가능
 **버그 수정**
 
 * &quot;채워진 필드만 표시&quot;를 선택 취소한 경우 오류를 발생하는 간헐적인 문제가 해결되었습니다.
-* 마우스로 가리키면 속성 요약이 표시되는 오류가 해결되었습니다. 이제 선택 항목에 표시됩니다.
+* 마우스로 가리키면 속성 요약이 표시되고, 이제 선택 시 표시되는 오류가 수정되었습니다.
 * 세그먼트 검색 시 페이지 매김 오류를 수정했습니다.
 * 사소한 사용 편의성이 개선되었습니다.
 
