Updated by task 'AUTO_TM_MT_1729032451679'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/f4fd8fa45002262d795baa885325224b5b172a76

--- a/help/release-notes/2024/may-2024.md
+++ b/help/release-notes/2024/may-2024.md
@@ -3,9 +3,9 @@ title: Adobe Experience Platform 릴리스 정보 2024년 5월
 description: Adobe Experience Platform의 2024년 5월 릴리스 정보.
 exl-id: d8ea4f9e-2006-415c-869e-2748047072bb
 source-git-commit: eac613434f631cab567ab3fa6e30d33acac79d2f
-workflow-type: ht
-source-wordcount: '1596'
-ht-degree: 100%
+workflow-type: tm+mt
+source-wordcount: '0'
+ht-degree: 0%
 
 ---
 
