--- a/help/sources/connectors/cloud-storage/s3.md
+++ b/help/sources/connectors/cloud-storage/s3.md
@@ -2,14 +2,18 @@
 title: Amazon S3 Source 커넥터 개요
 description: API 또는 사용자 인터페이스를 사용하여 Amazon S3를 Adobe Experience Platform에 연결하는 방법을 알아봅니다.
 exl-id: e38c7d09-5f5e-4c8a-b494-dce9f984f3d8
-source-git-commit: 0cecd720e6009e54796291611052fcfdee4eecbf
+source-git-commit: ee659ded9701132b12d5b93672b4c958e9720028
 workflow-type: tm+mt
-source-wordcount: '972'
+source-wordcount: '1017'
 ht-degree: 0%
 
 ---
 
 # [!DNL Amazon S3] 원본
+
+>[!IMPORTANT]
+>
+>이제 Amazon Web Services(AWS)에서 Adobe Experience Platform을 실행할 때 [!DNL Amazon S3] 소스를 사용할 수 있습니다. 현재 AWS에서 실행 중인 Experience Platform은 제한된 수의 고객이 사용할 수 있습니다. 지원되는 Experience Platform 인프라에 대한 자세한 내용은 [Experience Platform 멀티 클라우드 개요](../../../landing/multi-cloud.md)를 참조하세요.
 
 Adobe Experience Platform은 AWS, [!DNL Google Cloud Platform] 및 [!DNL Azure]과(와) 같은 클라우드 공급업체에 기본 연결을 제공합니다. 이러한 시스템의 데이터를 Experience Platform으로 가져올 수 있습니다.
 
