--- a/help/sources/tutorials/api/create/cloud-storage/s3.md
+++ b/help/sources/tutorials/api/create/cloud-storage/s3.md
@@ -1,53 +1,50 @@
 ---
-keywords: Experience Platform;홈;인기 항목;Amazon S3;s3;S3
-solution: Experience Platform
-title: 흐름 서비스 API를 사용하여 Amazon S3 기본 연결 만들기
-type: Tutorial
+title: 흐름 서비스 API를 사용하여 Amazon S3를 Experience Platform에 연결
 description: 흐름 서비스 API를 사용하여 Adobe Experience Platform을 Amazon S3에 연결하는 방법을 알아봅니다.
 exl-id: c11cf1c8-86ff-4851-b2c2-7e421dcc37ea
-source-git-commit: 59dfa862388394a68630a7136dee8e8988d0368c
+source-git-commit: 1b0e8a8e408b2a1ebd3cc50a4c8339da1484c306
 workflow-type: tm+mt
-source-wordcount: '731'
+source-wordcount: '1041'
 ht-degree: 3%
 
 ---
 
-# [!DNL Flow Service] API를 사용하여 [!DNL Amazon] S3 기본 연결 만들기
+# [!DNL Flow Service] API를 사용하여 [!DNL Amazon S3]을(를) Experience Platform에 연결
 
-기본 연결은 소스와 Adobe Experience Platform 간의 인증된 연결을 나타냅니다.
-
-이 자습서에서는 [[!DNL Flow Service] API](https://www.adobe.io/experience-platform-apis/references/flow-service/)를 사용하여 [!DNL Amazon S3](이하 &quot;[!DNL S3]&quot;)에 대한 기본 연결을 만드는 단계를 안내합니다.
+[[!DNL Flow Service] API](https://developer.adobe.com/experience-platform-apis/references/flow-service/)를 사용하여 [!DNL Amazon] S3 소스 계정을 Adobe Experience Platform에 연결하는 방법에 대해 알아보려면 이 안내서를 참조하십시오.
 
 ## 시작하기
 
 이 안내서를 사용하려면 Adobe Experience Platform의 다음 구성 요소에 대해 이해하고 있어야 합니다.
 
-* [원본](../../../../home.md): [!DNL Experience Platform]에서는 데이터를 다양한 원본에서 수집할 수 있으며 [!DNL Platform] 서비스를 사용하여 들어오는 데이터를 구조화하고 레이블을 지정하고 개선하는 기능을 제공합니다.
-* [샌드박스](../../../../../sandboxes/home.md): [!DNL Experience Platform]에서는 단일 [!DNL Platform] 인스턴스를 별도의 가상 환경으로 분할하여 디지털 경험 응용 프로그램을 개발하고 발전시키는 데 도움이 되는 가상 샌드박스를 제공합니다.
-
-다음 절에서는 [!DNL Flow Service] API를 사용하여 [!DNL S3] 저장소에 성공적으로 연결하기 위해 알아야 할 추가 정보를 제공합니다.
-
-### 필요한 자격 증명 수집
-
-[!DNL Flow Service]이(가) [!DNL S3] 저장소에 연결하려면 다음 연결 속성에 대한 값을 제공해야 합니다.
-
-| 자격 증명 | 설명 |
-| ---------- | ----------- |
-| `s3AccessKey` | [!DNL S3] 버킷의 액세스 키 ID입니다. |
-| `s3SecretKey` | [!DNL S3] 버킷의 비밀 키 ID입니다. |
-| `serviceUrl` | (선택 사항) 연결할 사용자 지정 [!DNL S3] 끝점입니다. 이 필드는 [!DNL S3] 버킷이 지역에 따라 다를 때 필요합니다. `serviceUrl`의 형식은 `https://s3.{REGION}.amazonaws.com/)`입니다. |
-| `bucketName` | [!DNL S3] 버킷에는 데이터 및 해당 설명 메타데이터가 포함되어 있습니다. [!DNL S3] 버킷 이름은 3자에서 63자 사이여야 하며 문자 또는 숫자로 시작하고 끝나야 합니다. 버킷 이름에는 소문자, 숫자 또는 하이픈(`-`)만 사용할 수 있으며 IP 주소 형식을 지정할 수 없습니다. |
-| `folderPath` | 데이터가 저장된 [!DNL S3] 버킷의 폴더에 대한 경로입니다. 이 자격 증명은 사용자가 액세스를 제한한 경우에 필요합니다. |
-| `s3SessionToken` | (선택 사항) 신뢰할 수 없는 환경의 사용자에게 [!DNL S3] 리소스에 대한 임시 액세스를 제공할 수 있는 단기 임시 토큰입니다. 자세한 내용은 [[!DNL S3] 개요](../../../../connectors/cloud-storage/s3.md#prerequisites)를 참조하세요. |
-| `connectionSpec.id` | 연결 사양은 기본 및 소스 연결 만들기와 관련된 인증 사양을 포함하여 소스의 커넥터 속성을 반환합니다. [!DNL S3]의 연결 사양 ID는 `ecadc60c-7455-4d87-84dc-2a0e293d997b`입니다. |
-
-시작하기에 대한 자세한 내용은 [이 [!DNL Amazon Web Services] 문서](https://aws.amazon.com/blogs/security/wheres-my-secret-access-key/)를 참조하세요.
+* [소스](../../../../home.md): Experience Platform을 사용하면 [!DNL Platform] 서비스를 사용하여 들어오는 데이터를 구조화하고 레이블을 지정하고 개선하는 기능을 제공하는 동시에 다양한 소스에서 데이터를 수집할 수 있습니다.
+* [샌드박스](../../../../../sandboxes/home.md): Experience Platform은 단일 [!DNL Platform] 인스턴스를 별도의 가상 환경으로 분할하여 디지털 경험 애플리케이션을 개발하고 발전시키는 데 도움이 되는 가상 샌드박스를 제공합니다.
 
 ### Platform API 사용
 
 Platform API를 성공적으로 호출하는 방법에 대한 자세한 내용은 [Platform API 시작](../../../../../landing/api-guide.md)에 대한 안내서를 참조하십시오.
 
-## 기본 연결 만들기
+## Azure의 Experience Platform에 [!DNL Amazon S3] 연결 {#azure}
+
+[!DNL Amazon S3] 원본을 Azure의 Experience Platform에 연결하는 방법에 대한 자세한 내용은 아래 단계를 참조하세요.
+
+### 필요한 자격 증명 수집
+
+[!DNL Flow Service]이(가) [!DNL Amazon S3] 저장소에 연결하려면 다음 연결 속성에 대한 값을 제공해야 합니다.
+
+| 자격 증명 | 설명 |
+| ---------- | ----------- |
+| `s3AccessKey` | [!DNL Amazon S3] 버킷의 액세스 키 ID입니다. |
+| `s3SecretKey` | [!DNL Amazon S3] 버킷의 비밀 키 ID입니다. |
+| `serviceUrl` | (선택 사항) 연결할 사용자 지정 [!DNL Amazon S3] 끝점입니다. 이 필드는 [!DNL Amazon S3] 버킷이 지역에 따라 다를 때 필요합니다. `serviceUrl`의 형식은 `https://s3.{REGION}.amazonaws.com/)`입니다. |
+| `bucketName` | [!DNL Amazon S3] 버킷에는 데이터 및 해당 설명 메타데이터가 포함되어 있습니다. [!DNL Amazon S3] 버킷 이름은 3자에서 63자 사이여야 하며 문자 또는 숫자로 시작하고 끝나야 합니다. 버킷 이름에는 소문자, 숫자 또는 하이픈(`-`)만 사용할 수 있으며 IP 주소 형식을 지정할 수 없습니다. |
+| `folderPath` | 데이터가 저장된 [!DNL Amazon S3] 버킷의 폴더에 대한 경로입니다. 이 자격 증명은 사용자가 액세스를 제한한 경우에 필요합니다. |
+| `s3SessionToken` | (선택 사항) 신뢰할 수 없는 환경의 사용자에게 [!DNL Amazon S3] 리소스에 대한 임시 액세스를 제공할 수 있는 단기 임시 토큰입니다. 자세한 내용은 [[!DNL Amazon S3] 개요](../../../../connectors/cloud-storage/s3.md#prerequisites)를 참조하세요. |
+| `connectionSpec.id` | 연결 사양은 기본 및 소스 연결 만들기와 관련된 인증 사양을 포함하여 소스의 커넥터 속성을 반환합니다. [!DNL Amazon S3]의 연결 사양 ID는 `ecadc60c-7455-4d87-84dc-2a0e293d997b`입니다. |
+
+시작하기에 대한 자세한 내용은 [이 [!DNL Amazon Web Services] 문서](https://aws.amazon.com/blogs/security/wheres-my-secret-access-key/)를 참조하세요.
+
+### Azure의 Experience Platform에서 [!DNL Amazon S3]에 대한 기본 연결 만들기
 
 기본 연결은 소스의 인증 자격 증명, 연결의 현재 상태 및 고유한 기본 연결 ID를 포함하여 소스와 플랫폼 간에 정보를 유지합니다. 기본 연결 ID를 사용하면 소스 내에서 파일을 탐색 및 탐색하고 데이터 유형 및 형식에 대한 정보를 포함하여 수집할 특정 항목을 식별할 수 있습니다.
 
@@ -61,7 +58,9 @@ POST /connections
 
 **요청**
 
-다음 요청은 [!DNL S3]에 대한 기본 연결을 만듭니다.
+다음 요청은 [!DNL Amazon S3]에 대한 기본 연결을 만듭니다.
+
++++요청 예제를 보려면 선택
 
 ```shell
 curl -X POST \
@@ -96,9 +95,13 @@ curl -X POST \
 | `auth.params.s3SessionToken` | (선택 사항) 버킷에 액세스하는 데 사용되는 단기, 임시 [!DNL S3] 토큰입니다. |
 | `connectionSpec.id` | [!DNL S3] 연결 사양 ID: `ecadc60c-7455-4d87-84dc-2a0e293d997b` |
 
++++
+
 **응답**
 
 응답이 성공하면 고유 식별자(`id`)를 포함하여 새로 만든 연결의 세부 정보가 반환됩니다. 다음 자습서에서 저장소를 탐색하려면 이 ID가 필요합니다.
+
++++응답 예를 보려면 선택
 
 ```json
 {
@@ -106,6 +109,158 @@ curl -X POST \
     "etag": "\"1700d77b-0000-0200-0000-5e3b41a10000\""
 }
 ```
+
++++
+
+## Amazon Web Services(AWS)의 Experience Platform에 [!DNL Amazon S3] 연결 {#aws}
+
+>[!AVAILABILITY]
+>
+>이 섹션은 Amazon Web Services(AWS)에서 실행되는 Experience Platform 구현에 적용됩니다. 현재 AWS에서 실행 중인 Experience Platform은 제한된 수의 고객이 사용할 수 있습니다. 지원되는 Experience Platform 인프라에 대한 자세한 내용은 [Experience Platform 멀티 클라우드 개요](../../../../../landing/multi-cloud.md)를 참조하세요.
+
+[!DNL Amazon S3] 원본을 AWS의 Experience Platform에 연결하는 방법에 대한 자세한 내용은 아래 단계를 참조하세요.
+
+### 전제 조건
+
+[!DNL Amazon S3] 계정을 AWS의 Experience Platform에 연결하려면 다음이 필요합니다.
+
+* 연결할 [!DNL Amazon S3] 버킷 또는 폴더에 액세스할 수 있는 AWS 계정입니다.
+* `s3:GetObject` 및 `s3:ListBucket` 작업을 허용하는 필수 IAM 권한입니다.
+
+#### 버킷 권한에 대한 IAM 역할 검색
+
+**API 형식**
+
+```http
+GET /connectionSpecs/{CONNECTION_SPEC_ID}/configs?authType={AUTH_TYPE}
+```
+
+**요청**
+
++++요청 예제를 보려면 선택
+
+```shell
+curl -X GET \
+  'https://platform.adobe.io/data/foundation/flowservice/connectionSpecs/ecadc60c-7455-4d87-84dc-2a0e293d997b/configs?authType=IamBasedAuthentication' \
+  -H 'Authorization: Bearer {ACCESS_TOKEN}' \
+  -H 'Content-Type: application/json' \
+  -H 'x-api-key: {API_KEY}' \
+  -H 'x-gw-ims-org-id: {ORG_ID}' \
+  -H 'x-sandbox-name: {SANDBOX_NAME}' \
+```
+
++++
+
+**응답**
+
+응답이 성공하면 IAM 역할이 반환됩니다. [!DNL Amazon S3] 버킷에서 권한을 설정하려면 다음 단계에서 이 값이 필요합니다.
+
++++응답 예를 보려면 선택
+
+```json
+{
+    "configParams": {
+          "IAMRole": "{IAM_ROLE}"
+    }
+}
+```
+
++++
+
+### [!DNL Amazon S3] 버킷에서 권한 설정
+
+1. [AWS 관리 콘솔](https://aws.amazon.com/)에서 계정에 로그인합니다.
+2. [!DNL Amazon S3] 버킷으로 이동한 다음 **[!DNL Permissions]**&#x200B;을(를) 선택합니다.
+3. 버킷 정책을 편집하고 다음 권한을 추가합니다.
+
+>[!TIP]
+>
+>`IAM_ROLE_TO_ALLOW_LIST`은(는) 이전 단계에서 API를 통해 가져온 IAM 역할입니다. {YOUR_BUCKET_NAME}을(를) [!DNL Amazon S3] 버킷의 실제 이름으로 바꾸어야 합니다. 특정 폴더에 대한 액세스 권한을 부여하려면 {YOUR_FOLDER_NAME}도 액세스 권한을 부여할 폴더의 실제 이름으로 바꾸어야 합니다.
+
+```json
+{
+    "Version": "2012-10-17",
+    "Statement": [
+        {
+            "Sid": "AEP Get Object Related Policy Prod",
+            "Effect": "Allow",
+            "Principal": {
+                "AWS": "{IAM_ROLE_TO_ALLOW_LIST}"
+            },
+            "Action": "s3:Get*",
+            "Resource": "arn:aws:s3:::{YOUR_BUCKET_NAME}/{YOUR_FOLDER_NAME}"
+        },
+        {
+            "Sid": "AEP List Bucket Prod",
+            "Effect": "Allow",
+            "Principal": {
+                "AWS": "{IAM_ROLE_TO_ALLOW_LIST}"
+            },
+            "Action": "s3:ListBucket",
+            "Resource": "arn:aws:s3:::{YOUR_BUCKET_NAME}"
+        }
+    ]
+}  
+```
+
+### AWS의 Experience Platform에서 [!DNL Amazon S3]에 대한 기본 연결 만들기
+
+**API 형식**
+
+```http
+POST /connections
+```
+
+**요청**
+
+다음 요청은 [!DNL Amazon S3]에 대한 기본 연결을 만듭니다.
+
++++예를 보려면 선택
+
+```shell
+curl -X POST \
+  'https://platform.adobe.io/data/foundation/flowservice/connections' \
+  -H 'Authorization: Bearer {ACCESS_TOKEN}' \
+  -H 'x-api-key: {API_KEY}' \
+  -H 'x-gw-ims-org-id: {ORG_ID}' \
+  -H 'x-sandbox-name: {SANDBOX_NAME}' \
+  -H 'Content-Type: application/json' \
+  -d '{
+      "name": "Amazon S3 base connection for Experience Platform on AWS",
+      "description": "Amazon S3 base connection for Experience Platform on AWS",
+      "auth": {
+          "specName": "IAMRole Based",
+          "params": {
+              "bucketName": "{YOUR_BUCKET_NAME}"
+          }
+      },
+      "connectionSpec": {
+          "id": "ecadc60c-7455-4d87-84dc-2a0e293d997b",
+          "version": "1.0"
+      }
+  }'
+```
+
+| 속성 | 설명 |
+| --- | --- |
+| `auth.params.bucketName` | [!DNL Amazon S3] 버킷의 이름입니다. 이전 단계에서 권한에 추가된 값과 동일한 값입니다. |
+
++++
+
+**응답**
+
+응답이 성공하면 고유 식별자(`id`)를 포함하여 새로 만든 연결의 세부 정보가 반환됩니다. 다음 자습서에서 저장소를 탐색하려면 이 ID가 필요합니다.
+
++++예를 보려면 선택
+
+```json
+{
+    "id": "4cb0c374-d3bb-4557-b139-5712880adc55",
+    "etag": "\"1700d77b-0000-0200-0000-5e3b41a10000\""
+}
+```
+
++++
 
 ## 다음 단계
 
