Updated by task 'MD_MANUAL_HANDOFF_1737012007165'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/591b41d977c83fb10c9fa70f0cf61967921d0537

--- a/help/sources/tutorials/api/create/cloud-storage/s3.md
+++ b/help/sources/tutorials/api/create/cloud-storage/s3.md
@@ -2,9 +2,9 @@
 title: 흐름 서비스 API를 사용하여 Amazon S3를 Experience Platform에 연결
 description: 흐름 서비스 API를 사용하여 Adobe Experience Platform을 Amazon S3에 연결하는 방법을 알아봅니다.
 exl-id: c11cf1c8-86ff-4851-b2c2-7e421dcc37ea
-source-git-commit: 1b0e8a8e408b2a1ebd3cc50a4c8339da1484c306
+source-git-commit: 22eae80d184ee6d0295be88856a47893faa428c7
 workflow-type: tm+mt
-source-wordcount: '1041'
+source-wordcount: '1040'
 ht-degree: 3%
 
 ---
@@ -107,6 +107,67 @@ curl -X POST \
 {
     "id": "4cb0c374-d3bb-4557-b139-5712880adc55",
     "etag": "\"1700d77b-0000-0200-0000-5e3b41a10000\""
+}
+```
+
++++
+
+### [!DNL S3] 세션 토큰 업데이트
+
+`s3SessionToken`은(는) 임시이며 만료되면 업데이트해야 합니다. [!DNL Flow Service] API에 PATCH 요청을 하여 기본 연결과 연결된 세션 토큰을 업데이트할 수 있습니다. [!DNL S3]의 임시 보안 자격 증명에 대한 자세한 내용은 [[!DNL S3] 개요](../../../../connectors/cloud-storage/s3.md#prerequisites)를 참조하십시오.
+
+>[!IMPORTANT]
+>
+>PATCH 요청을 할 때 `If-Match` 헤더가 필요합니다. 이 헤더의 값은 업데이트하려는 연결의 고유한 태그입니다.
+
+**API 형식**
+
+```http
+PATCH /connections
+```
+
+**요청**
+
+다음 요청은 [!DNL Amazon S3]에 대한 기본 연결을 만듭니다.
+
++++요청 예제를 보려면 선택
+
+```shell
+curl -X PATCH \
+    'https://platform.adobe.io/data/foundation/flowservice/connections/4cb0c374-d3bb-4557-b139-5712880adc55' \
+    -H 'Authorization: Bearer {ACCESS_TOKEN}' \
+    -H 'Content-Type: application/json' \
+    -H 'x-api-key: {API_KEY}' \
+    -H 'x-gw-ims-org-id: {ORG_ID}' \
+    -H 'x-sandbox-name: {SANDBOX_NAME}' \
+    -H 'If-Match: "1700d77b-0000-0200-0000-5e3b41a10000"'
+    -d '[
+        {
+            "op": "replace",
+            "path": "/auth/params/s3SessionToken",
+            "value": "{SESSION_TOKEN}"
+        }
+    ]'
+```
+
+| 매개변수 | 설명 |
+| --------- | ----------- |
+| `op` | 연결을 업데이트하는 데 필요한 작업을 정의하는 데 사용되는 작업 호출입니다. 작업에는 `add`, `replace` 및 `remove`이(가) 포함됩니다. |
+| `path` | 업데이트할 매개 변수의 경로입니다. |
+| `value` | 매개 변수를 업데이트할 새 값입니다. |
+
++++
+
+**응답**
+
+성공적인 응답은 기본 연결 ID와 업데이트된 etag를 반환합니다. 연결 ID를 제공하는 동안 [!DNL Flow Service] API에 대한 GET 요청을 하여 업데이트를 확인할 수 있습니다.
+
++++응답 예를 보려면 선택
+
+```json
+{
+    "id": "4cb0c374-d3bb-4557-b139-5712880adc55",
+    "etag": "\"3600e378-0000-0200-0000-5f40212f0000\""
 }
 ```
 
@@ -265,60 +326,3 @@ curl -X POST \
 ## 다음 단계
 
 이 자습서에 따라 API를 사용하여 S3 연결을 만들었고 고유 ID를 응답 본문의 일부로 가져왔습니다. 이 연결 ID를 사용하여 [흐름 서비스 API를 사용하여 클라우드 저장소 탐색](../../explore/cloud-storage.md)할 수 있습니다.
-
-## 부록
-
-다음 단원에서는 [!DNL S3] 원본 사용에 대한 추가 정보를 제공합니다.
-
-### [!DNL S3] 세션 토큰 업데이트
-
-`s3SessionToken`은(는) 임시이며 만료되면 업데이트해야 합니다. [!DNL Flow Service] API에 PATCH 요청을 하여 기본 연결과 연결된 세션 토큰을 업데이트할 수 있습니다. [!DNL S3]의 임시 보안 자격 증명에 대한 자세한 내용은 [[!DNL S3] 개요](../../../../connectors/cloud-storage/s3.md#prerequisites)를 참조하십시오.
-
->[!IMPORTANT]
->
->PATCH 요청을 할 때 `If-Match` 헤더가 필요합니다. 이 헤더의 값은 업데이트하려는 연결의 고유한 태그입니다.
-
-**API 형식**
-
-```http
-PATCH /connections
-```
-
-**요청**
-
-다음 요청은 [!DNL S3]에 대한 기본 연결을 만듭니다.
-
-```shell
-curl -X PATCH \
-    'https://platform.adobe.io/data/foundation/flowservice/connections/4cb0c374-d3bb-4557-b139-5712880adc55' \
-    -H 'Authorization: Bearer {ACCESS_TOKEN}' \
-    -H 'Content-Type: application/json' \
-    -H 'x-api-key: {API_KEY}' \
-    -H 'x-gw-ims-org-id: {ORG_ID}' \
-    -H 'x-sandbox-name: {SANDBOX_NAME}' \
-    -H 'If-Match: "1700d77b-0000-0200-0000-5e3b41a10000"'
-    -d '[
-        {
-            "op": "replace",
-            "path": "/auth/params/s3SessionToken",
-            "value": "{SESSION_TOKEN}"
-        }
-    ]'
-```
-
-| 매개변수 | 설명 |
-| --------- | ----------- |
-| `op` | 연결을 업데이트하는 데 필요한 작업을 정의하는 데 사용되는 작업 호출입니다. 작업에는 `add`, `replace` 및 `remove`이(가) 포함됩니다. |
-| `path` | 업데이트할 매개 변수의 경로입니다. |
-| `value` | 매개 변수를 업데이트할 새 값입니다. |
-
-**응답**
-
-성공적인 응답은 기본 연결 ID와 업데이트된 etag를 반환합니다. 연결 ID를 제공하는 동안 [!DNL Flow Service] API에 대한 GET 요청을 하여 업데이트를 확인할 수 있습니다.
-
-```json
-{
-    "id": "4cb0c374-d3bb-4557-b139-5712880adc55",
-    "etag": "\"3600e378-0000-0200-0000-5f40212f0000\""
-}
-```
